Rename and update lecture documentation
Rename lecture files to include version suffixes and consistent naming.
Update titles and target audience in functional domain modeling lectures to be more general.
Add `git mv` permission to local settings.