@@ -1,11 +1,11 @@
-# Java 25로 정복하는 함수형 도메인 모델링 V2
-## Domain Modeling Made Functional - 이커머스 실전 교재
+# Java로 정복하는 함수형 도메인 모델링
+## 참조: Domain Modeling Made Functional
 
-**대상**: 이커머스 개발자 (회원, 상품, 주문, 결제, 쿠폰 도메인)
+**대상**: 백엔드 자바 개발자
 
 **목표**: 컴파일 타임에 버그를 잡는 견고한 시스템 구축
 
-**도구**: Java 25 (Record, Sealed Interface, Pattern Matching, `with` 구문 *Preview*)
+**도구**: Java 25 (Record, Sealed Interface, Pattern Matching)
 
 ---
 
@@ -13,9 +13,9 @@
 
 ### Part I: 기초 - 도메인과 타입 시스템
 - **Chapter 1**: DDD와 함수형 사고의 기초
-- **Chapter 2**: 원시 타입의 저주 깨기 - Wrapped Object
+- **Chapter 2**: 원시 타입의 저주 끊기 - Simple Types
 - **Chapter 3**: 복합 타입 - AND/OR Types
-- **Chapter 4**: 불가능한 상태 제거하기
+- **Chapter 4**: 불가능한 상태를 불가능하게
 
 ### Part II: 심화 - 워크플로우와 에러 처리
 - **Chapter 5**: 워크플로우를 함수 파이프라인으로
@@ -28,12 +28,9 @@
 
 ### Part IV: 종합
 - **Chapter 10**: 종합 프로젝트 - 이커머스 완전 정복
-
-### 부록
-- **Appendix A**: 흔한 실수 모음 (⚠️ 경고)
-- **Appendix B**: Java 25 함수형 Cheat Sheet
-- **Appendix C**: 심화 Q&A
-- **Appendix D**: 전체 퀴즈 정답
+- **Appendix A**: 흔한 실수와 안티패턴 모음
+- **Appendix B**: Java 25 함수형 치트시트
+- **Appendix C**: 전체 퀴즈 정답 및 해설
 
 ---
 
@@ -47,19 +44,19 @@
 1. Bounded Context의 개념과 필요성을 이해한다
 2. Ubiquitous Language가 코드 품질에 미치는 영향을 설명할 수 있다
 3. 불변성(Immutability)의 장점을 이해하고 Java Record로 구현할 수 있다
-4. 순수 함수(Pure Function)의 본질을 파악한다
+4. 함수형 사고방식이 도메인 모델링에 주는 이점을 파악한다
 5. Event Storming을 통해 도메인을 탐험하는 방법을 익힌다
 
 ---
 
 ### 1.1 Bounded Context: 맥락이 왕이다
 
-#### 🎯 WHY: 하나의 통합 모델은 왜 실패하는가?
+#### 왜 하나의 통합 모델은 실패하는가?
 
 많은 개발팀이 범하는 가장 큰 실수는 **"하나의 통합된 모델"**을 만들려는 것입니다. 예를 들어 `User`라는 클래스 하나에 로그인 정보, 배송지 주소, 쿠폰 보유량, 정산 계좌 정보를 모두 넣으려 합니다.
 
 ```java
-// ❌ 안티패턴: 모든 것을 담은 God Class
+// 안티패턴: 모든 것을 담은 God Class
 public class User {
     private Long id;
     private String username;
@@ -79,7 +76,7 @@ public class User {
 - **성능 저하**: 단순 로그인에도 불필요한 정산 정보까지 로드
 - **팀 간 충돌**: 여러 팀이 같은 클래스를 동시에 수정하려다 Git 충돌
 
-#### 💡 비유: 나라와 언어
+#### 비유: 나라와 언어
 
 > **Bounded Context는 나라와 같습니다.**
 >
@@ -154,12 +151,12 @@ public record Payee(
 
 ### 1.2 Ubiquitous Language: 코드가 곧 문서다
 
-#### 🎯 WHY: 개발자-기획자 간 "전화놀이" 효과 방지
+#### 기획자와 개발자의 언어 통일
 
 DDD의 또 다른 핵심은 **유비쿼터스 언어(Ubiquitous Language)**입니다. 기획자(Domain Expert)와 개발자가 같은 용어를 사용해야 합니다.
 
 ```java
-// ❌ 나쁜 예: 기획서와 코드의 용어가 다름
+// 나쁜 예: 기획서와 코드의 용어가 다름
 // 기획서: "쿠폰을 적용하면 할인된 금액이 계산됩니다"
 public class Util {
     public static double calc(double a, String c) {
@@ -168,7 +165,7 @@ public class Util {
     }
 }
 
-// ✅ 좋은 예: 기획서의 용어가 그대로 코드에 등장
+// 좋은 예: 기획서의 용어가 그대로 코드에 등장
 public class CouponService {
     public DiscountedPrice applyCoupon(OriginalPrice price, Coupon coupon) {
         // 기획서를 읽은 사람이라면 이 코드를 바로 이해할 수 있음
@@ -177,7 +174,7 @@ public class CouponService {
 }
 ```
 
-#### 💡 비유: 통역 없는 직접 대화
+#### 비유: 통역 없는 직접 대화
 
 > **코드는 번역기가 되어서는 안 됩니다. 코드가 곧 문서가 되어야 합니다.**
 >
@@ -201,14 +198,14 @@ public class CouponService {
 
 ### 1.3 불변성(Immutability)과 Java Record
 
-#### 🎯 WHY: 상태 추적 불가능 문제
+#### 왜 데이터는 불변이어야 하는가?
 
 함수형 프로그래밍의 핵심 원칙 중 하나는 **불변성(Immutability)**입니다. 데이터가 한번 생성되면 변경되지 않습니다.
 
 **가변 객체의 문제점:**
 
 ```java
-// ❌ 가변 객체: 언제 어디서 값이 바뀔지 모름
+// 가변 객체: 언제 어디서 값이 바뀔지 모름
 public class MutableOrder {
     private String status;
     private int amount;
@@ -233,7 +230,7 @@ processOrder(order);  // 이 시점에 order의 상태가 뭐지?
 // 결과: 취소된 주문인데 금액이 변경됨 (일관성 파괴)
 ```
 
-#### 💡 비유: 공증된 계약서
+#### 비유: 공증된 계약서
 
 > **불변 객체는 공증된 계약서와 같습니다.**
 >
@@ -254,7 +251,7 @@ Java 14+부터 도입된 `record`는 불변 데이터 객체를 위한 최고의
 **기존 클래스 vs Record:**
 
 ```java
-// ❌ 기존 방식: 보일러플레이트 코드가 많음
+// 기존 방식: 보일러플레이트 코드가 많음
 public final class OrderAmount {
     private final BigDecimal value;
 
@@ -283,7 +280,7 @@ public final class OrderAmount {
     }
 }
 
-// ✅ Java Record: 한 줄로 동일한 기능
+// Java Record: 한 줄로 동일한 기능
 public record OrderAmount(BigDecimal value) {}
 ```
 
@@ -292,108 +289,69 @@ public record OrderAmount(BigDecimal value) {}
 - `getter`, `equals`, `hashCode`, `toString` 자동 생성
 - Setter는 없음 (값을 바꾸려면 새 객체 생성)
 
-#### `with` 구문으로 상태 변경 (Java 25 Preview)
-
-Java 25의 **Derived Record Creation (JEP 468)** `with` 구문을 사용하면 불변성을 유지하면서도 직관적으로 "상태를 변경"할 수 있습니다.
-
-> ⚠️ **주의**: `with` 구문은 **Preview Feature**입니다. 컴파일 시 `--enable-preview` 플래그가 필요하며, 정식 출시 전 변경될 수 있습니다. 프로덕션 환경에서는 아래의 대안 코드를 권장합니다.
+#### 값을 변경하고 싶다면? with 패턴
 
 ```java
-public record Order(OrderId id, OrderStatus status, Money total) {
+public record Order(String orderId, OrderAmount amount, OrderStatus status) {
     // 상태를 변경한 "새로운" 주문 객체 반환
     public Order withStatus(OrderStatus newStatus) {
-        return this with { status = newStatus; };  // Preview
+        return new Order(this.orderId, this.amount, newStatus);
     }
 }
 
 // 사용
-Order unpaidOrder = new Order(orderId, OrderStatus.UNPAID, amount);
-Order paidOrder = unpaidOrder with { status = OrderStatus.PAID; };
+Order unpaidOrder = new Order("ORD-001", amount, OrderStatus.UNPAID);
+Order paidOrder = unpaidOrder.withStatus(OrderStatus.PAID);
 
 // unpaidOrder는 여전히 UNPAID (불변!)
 // paidOrder는 새로운 객체로 PAID
 ```
 
-**대안: Preview 없이 사용하는 방법 (Java 17+)**
-
-```java
-public record Order(OrderId id, OrderStatus status, Money total) {
-    // 수동으로 with 메서드 구현
-    public Order withStatus(OrderStatus newStatus) {
-        return new Order(this.id, newStatus, this.total);
-    }
-}
-
-// 사용
-Order paidOrder = unpaidOrder.withStatus(OrderStatus.PAID);
-```
-
-> ⚠️ **흔한 실수**: "Entity는 상태가 변하니까 mutable이어야 하지 않나?"
->
-> **아닙니다!** 함수형 DDD에서는 Entity조차도 불변으로 다룹니다.
-> Entity의 상태가 변한다는 것은 "어제의 나와 다른 객체"를 만드는 것입니다.
-> 하지만 **ID(주민등록번호)**가 같으니 같은 사람으로 취급합니다.
->
-> ```java
-> Person olderMe = youngMe with { age = 20; };
-> // youngMe와 olderMe가 동시에 존재! 시간 여행 가능!
-> ```
-
 ---
 
-### 1.4 순수 함수(Pure Functions)
+### 1.4 함수형 사고방식
 
-#### 🎯 WHY: 부수 효과로 인한 예측 불가능
+#### 명령형 vs 선언형
 
-함수형 프로그래밍에서 함수는 **파이프(Pipe)**입니다.
-- 입력(Input)이 들어가면
-- 항상 똑같은 출력(Output)이 나옵니다.
-- **부수 효과(Side Effect)**가 없어야 합니다.
+**명령형(Imperative)**: "어떻게(How)" 할지를 단계별로 지시
 
 ```java
-// ❌ 나쁜 예 (부수 효과 있음):
-int globalCount = 0;
-
-public int add(int a, int b) {
-    globalCount++; // ⚠️ 범인! 외부 상태를 몰래 바꿈
-    return a + b;
-}
-
-// ✅ 좋은 예 (순수 함수):
-public int add(int a, int b) {
-    return a + b; // 오직 입력만으로 결과를 만듦. 언제 실행해도 결과가 같음.
+// 명령형: 장바구니 총액 계산
+int total = 0;
+for (Item item : cart.getItems()) {
+    if (item.isAvailable()) {
+        total = total + item.getPrice();
+    }
 }
 ```
 
-#### 순수 함수의 본질: 참조 투명성(Referential Transparency)
+**선언형(Declarative)**: "무엇을(What)" 원하는지를 표현
 
-> **"언제, 어디서, 누가 실행하든 입력이 같으면 결과가 무조건 같아야 한다.
-> 그리고 그 외에는 아무 일도 일어나지 않아야 한다."**
+```java
+// 선언형: 장바구니 총액 계산
+int total = cart.getItems().stream()
+    .filter(Item::isAvailable)
+    .mapToInt(Item::getPrice)
+    .sum();
+```
 
-예시: `add(2, 3) -> 5`
-- 이 함수는 내일 실행하든, 100년 뒤에 실행하든, 우주 정거장에서 실행하든 항상 5입니다.
-- 세상에 아무런 흔적을 남기지 않습니다.
-- `add(2, 3)`을 그냥 숫자 `5`로 바꿔쳐도 프로그램은 똑같이 동작합니다.
+#### 함수형 도메인 모델링의 핵심 아이디어
 
-> ⚠️ **흔한 실수**: `System.out.println("Hello")`도 부수 효과입니다!
->
-> **왜?**
-> - **세상을 바꿈**: 모니터(콘솔)라는 외부 세계의 상태를 변경했습니다. 픽셀이 바뀌었죠.
-> - **결과가 보장 안 됨**: 모니터가 꺼져 있거나, 파이프가 깨지면 동작이 달라질 수 있습니다.
-> - **대체 불가능**:
->   ```java
->   public int impure(int x) {
->       System.out.println("Firing Missile!"); // 부수 효과
->       return x + 1;
->   }
->   ```
->   위 코드에서 `impure(1)`을 결과값인 `2`로 바꿔버리면? 미사일은 발사되지 않습니다!
+1. **타입이 문서다**: 함수 시그니처만 봐도 무슨 일을 하는지 알 수 있어야 함
+2. **불가능한 상태는 표현 불가능하게**: 잘못된 데이터는 타입 레벨에서 차단
+3. **부수효과 격리**: 순수한 비즈니스 로직과 I/O를 분리
+4. **파이프라인 사고**: 데이터 변환의 연속으로 워크플로우 구성
 
-#### 순수 함수의 실질적 이점
+```java
+// 함수형 사고: 주문 처리를 데이터 변환으로 표현
+// UnvalidatedOrder -> ValidatedOrder -> PricedOrder -> PaidOrder
 
-1. **테스트의 천국**: Mock 없이 `assert(f(input) == expected)` 한 줄로 테스트 끝
-2. **Local Reasoning**: 버그 추적 시 함수 안만 보면 됨
-3. **동시성 안전**: 값을 바꾸지 않으므로 락(Lock) 불필요
+public Result<PaidOrder, OrderError> processOrder(UnvalidatedOrder input) {
+    return validate(input)           // 검증
+        .flatMap(this::calculatePrice)  // 가격 계산
+        .flatMap(this::processPayment); // 결제 처리
+}
+```
 
 ---
 
@@ -401,13 +359,13 @@ public int add(int a, int b) {
 
 #### 코딩보다 먼저 해야 할 일
 
-도메인 모델링은 클래스 다이어그램을 그리는 것에서 시작하지 않습니다. **이벤트 스토밍(Event Storming)**이라는 협업 워크숍을 통해 비즈니스 흐름을 파악하는 것이 먼저입니다.
+도메인 모델링은 클래스 다이어그램을 그리는 것에서 시작하지 않습니다. **이벤트 스토밍(Event Storming)** 이라는 협업 워크숍을 통해 비즈니스 흐름을 파악하는 것이 먼저입니다.
 
 **핵심 질문**: "우리 시스템에서 어떤 흥미로운 일이 발생합니까?"
 
 #### 도메인 이벤트(Domain Event)
 
-도메인 이벤트는 비즈니스적으로 의미 있는 사건을 **과거형**으로 기술합니다.
+도메인 이벤트는 비즈니스적으로 의미 있는 사건을 과거형으로 기술합니다.
 
 - **주문됨 (OrderPlaced)**
 - **결제됨 (PaymentReceived)**
@@ -418,13 +376,7 @@ public int add(int a, int b) {
 
 이벤트를 시간 순서대로 나열하면 자연스럽게 워크플로우가 드러납니다.
 
-```
-[PlaceOrderCommand] → 주문 프로세스 → [OrderPlaced]
-                           ↓
-[PayOrderCommand]  → 결제 프로세스 → [PaymentReceived]
-                           ↓
-[ShipOrderCommand] → 배송 프로세스 → [ShippingStarted]
-```
+> `주문됨` → (결제 프로세스) → `결제됨` → (배송 프로세스) → `배송 시작됨`
 
 이 흐름이 바로 우리가 구현할 파이프라인의 청사진이 됩니다. 각 단계(프로세스)는 입력을 받아 이벤트를 발생시키는 함수로 모델링할 수 있습니다.
 
@@ -532,6 +484,7 @@ package com.ecommerce.order;
 
 public class OrderService {
     public void createOrder(Customer customer, List<Product> products) {
+        // 주문 생성 로직
         Order order = new Order(customer, products);
 
         // 문제: 주문 서비스에서 인증 로직 직접 호출
@@ -550,37 +503,17 @@ D. 트랜잭션 처리가 없다
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
-## Chapter 2: 원시 타입의 저주 깨기 - Wrapped Object
+## Chapter 2: 원시 타입의 저주 끊기 - Simple Types
 
 ### 학습 목표
 1. Primitive Obsession 안티패턴을 인식하고 그 위험성을 설명할 수 있다
 2. Value Object와 Entity의 차이를 이해한다
 3. Compact Constructor를 활용해 생성 시점 검증을 구현할 수 있다
 4. 도메인 타입으로 코드의 의도를 명확히 전달할 수 있다
-
----
-
-### 🎯 [핵심 동기 예시] 왜 Wrapped Object가 필요한가?
-
-```java
-// ❌ 위험: 순서 바뀌어도 컴파일 성공
-new Customer("홍길동", "서울시 강남구", "hong@test.com");
-new Customer("홍길동", "hong@test.com", "서울시 강남구"); // 버그! 컴파일 OK
-
-// ✅ 안전: 순서 바뀌면 컴파일 실패
-new Customer(
-    new CustomerName("홍길동"),
-    new PostalAddress("서울시 강남구"),
-    new EmailAddress("hong@test.com")
-);
-// PostalAddress 자리에 EmailAddress를 넣으면 컴파일 에러!
-```
-
-**컴파일러가 우리의 첫 번째 테스터가 됩니다.**
 
 ---
 
@@ -591,7 +524,7 @@ new Customer(
 이커머스 코드에서 가장 흔히 보는 안티패턴입니다:
 
 ```java
-// ❌ 위험한 코드: 모든 것이 String과 숫자
+// 위험한 코드: 모든 것이 String과 숫자
 public class PaymentService {
     public void processPayment(
         String customerId,
@@ -617,7 +550,7 @@ paymentService.processPayment(
 컴파일러는 이 코드에서 아무 문제도 발견하지 못합니다. 모두 `String`이고 `double`이니까요.
 하지만 런타임에 예상치 못한 버그가 발생합니다.
 
-#### 💡 비유: 라벨 없는 약병
+#### 비유: 라벨 없는 약병
 
 > **Primitive Obsession은 라벨 없는 약병과 같습니다.**
 >
@@ -659,11 +592,11 @@ double totalPrice = quantity + price;  // 수량 + 가격? 컴파일 OK
 | 구분 | Value Object (값 객체) | Entity (엔티티) |
 |-----|----------------------|----------------|
 | 동등성 | 값이 같으면 같은 것 | ID가 같으면 같은 것 |
-| 불변성 | 항상 불변 | 상태가 변할 수 있음 (함수형에서는 불변으로 처리) |
+| 불변성 | 항상 불변 | 상태가 변할 수 있음 |
 | 수명 | 독립적 | 영속적 (DB에 저장) |
 | 예시 | 금액, 이메일, 주소 | 주문, 회원, 상품 |
 
-#### 💡 비유: 지폐와 은행 계좌
+#### 비유: 지폐와 은행 계좌
 
 > **Value Object는 지폐, Entity는 은행 계좌입니다.**
 >
@@ -676,7 +609,7 @@ double totalPrice = quantity + price;  // 수량 + 가격? 컴파일 OK
 > **은행 계좌(Entity)**:
 > - 같은 100만원이 들어있어도 "내 계좌"와 "네 계좌"는 다릅니다
 > - 계좌번호(ID)가 같으면 같은 계좌입니다
-> - 계좌의 잔액은 변할 수 있습니다 (가변 → 함수형에서는 새 객체로)
+> - 계좌의 잔액은 변할 수 있습니다 (가변)
 > - 계좌는 "생성 → 사용 → 폐쇄"의 생명주기가 있습니다
 
 #### 코드로 보는 차이
@@ -708,9 +641,6 @@ Java Record의 **Compact Constructor**를 사용하면 객체가 생성되는 �
 
 ```java
 package com.ecommerce.domain.types;
-
-import java.math.BigDecimal;
-import java.util.Objects;
 
 // 1. 이메일 주소
 public record EmailAddress(String value) {
@@ -754,7 +684,29 @@ public record OrderAmount(BigDecimal value) {
     }
 }
 
-// 3. 수량 (1 이상)
+// 3. 쿠폰 코드 (정확히 10자리 영숫자)
+public record CouponCode(String value) {
+    private static final Pattern PATTERN = Pattern.compile("^[A-Z0-9]{10}$");
+
+    public CouponCode {
+        if (value == null || !PATTERN.matcher(value).matches()) {
+            throw new IllegalArgumentException(
+                "쿠폰 코드는 10자리 영숫자여야 합니다: " + value
+            );
+        }
+    }
+}
+
+// 4. 회원 ID (양수)
+public record MemberId(long value) {
+    public MemberId {
+        if (value <= 0) {
+            throw new IllegalArgumentException("회원 ID는 양수여야 합니다: " + value);
+        }
+    }
+}
+
+// 5. 수량 (1 이상)
 public record Quantity(int value) {
     public Quantity {
         if (value < 1) {
@@ -768,29 +720,7 @@ public record Quantity(int value) {
 }
 ```
 
-> ⚠️ **흔한 실수**: `if (quantity < 0)` → 0도 막아야 합니다!
->
-> ```java
-> // ❌ 잘못된 검증: 0은 허용됨
-> public record OrderQuantity(int quantity) {
->     public OrderQuantity {
->         if (quantity < 0 || quantity > 100) {  // 0은 통과!
->             throw new IllegalArgumentException("Invalid quantity");
->         }
->     }
-> }
->
-> // ✅ 올바른 검증: 1 이상이어야 함
-> public record OrderQuantity(int quantity) {
->     public OrderQuantity {
->         if (quantity < 1 || quantity > 100) {  // 0도 막음!
->             throw new IllegalArgumentException("수량은 1개에서 100개 사이여야 합니다");
->         }
->     }
-> }
-> ```
-
-#### 💡 비유: 공항 입국 심사
+#### 비유: 공항 입국 심사
 
 > **Compact Constructor는 공항 입국 심사와 같습니다.**
 >
@@ -805,16 +735,90 @@ public record Quantity(int value) {
 > 유효성 검사를 통과하지 못한 데이터는 우리 시스템(도메인)에 들어올 수 없습니다.
 > 일단 입국(생성)이 허용되면, 그 이후로는 "이 데이터는 유효하다"고 확신할 수 있습니다.
 
+#### 달라진 메서드 시그니처
+
+```java
+// Before: 원시 타입 - 아무거나 넣을 수 있음
+public void processPayment(String email, double amount) { ... }
+
+// After: 도메인 타입 - 잘못된 타입은 컴파일 에러
+public void processPayment(EmailAddress email, OrderAmount amount) { ... }
+
+// 호출 시도
+processPayment(
+    new EmailAddress("invalid"),     // 런타임 에러: @ 없음
+    OrderAmount.won(-1000)           // 런타임 에러: 음수
+);
+
+// 올바른 호출
+processPayment(
+    new EmailAddress("user@example.com"),  // OK
+    OrderAmount.won(50000)                  // OK
+);
+```
+
 ---
 
-### 2.4 도메인별 Simple Type 설계
+### 2.4 도메인 타입의 추가 이점
+
+#### 1. 자동 완성과 IDE 지원
+
+```java
+// Before: amount가 뭐였더라?
+public void process(double amount) {
+    // amount * ??? 뭘 해야 하지?
+}
+
+// After: IDE가 도와줌
+public void process(OrderAmount amount) {
+    amount.  // IDE: add(), multiply(), value() 등 제안
+}
+```
+
+#### 2. 비즈니스 로직 응집
+
+```java
+public record Percentage(int value) {
+    public Percentage {
+        if (value < 0 || value > 100) {
+            throw new IllegalArgumentException("퍼센트는 0-100 사이여야 합니다");
+        }
+    }
+
+    // 할인율 계산 로직이 타입 안에 응집
+    public OrderAmount calculateDiscount(OrderAmount original) {
+        BigDecimal discountRate = BigDecimal.valueOf(value).divide(BigDecimal.valueOf(100));
+        BigDecimal discounted = original.value().multiply(BigDecimal.ONE.subtract(discountRate));
+        return new OrderAmount(discounted);
+    }
+}
+
+// 사용
+Percentage discountRate = new Percentage(10);  // 10% 할인
+OrderAmount discounted = discountRate.calculateDiscount(originalPrice);
+```
+
+#### 3. 디버깅 용이성
+
+```java
+// Before: 로그에서 의미 파악 어려움
+logger.info("Processing: " + email + ", " + amount);
+// 출력: Processing: user@test.com, 50000.0
+
+// After: 타입 정보가 명확
+logger.info("Processing: " + email + ", " + amount);
+// 출력: Processing: EmailAddress[value=user@test.com], OrderAmount[value=50000]
+```
+
+---
+
+### 2.5 이커머스 Simple Types 종합 예시
 
 ```java
 package com.ecommerce.domain.types;
 
 import java.math.BigDecimal;
-import java.math.RoundingMode;
-import java.util.Objects;
+import java.time.LocalDateTime;
 import java.util.regex.Pattern;
 
 // === 공통 타입 ===
@@ -828,8 +832,6 @@ public record Money(BigDecimal amount, Currency currency) {
         }
     }
 
-    public static final Money ZERO = new Money(BigDecimal.ZERO, Currency.KRW);
-
     public static Money krw(long amount) {
         return new Money(BigDecimal.valueOf(amount), Currency.KRW);
     }
@@ -839,71 +841,6 @@ public record Money(BigDecimal amount, Currency currency) {
             throw new IllegalArgumentException("통화가 다릅니다");
         }
         return new Money(this.amount.add(other.amount), this.currency);
-    }
-
-    /**
-     * 금액을 뺍니다. 결과가 음수면 생성자에서 IllegalArgumentException 발생.
-     * 안전한 뺄셈이 필요하면 canSubtract()로 먼저 확인하거나 subtractSafe()를 사용하세요.
-     */
-    public Money subtract(Money other) {
-        if (this.currency != other.currency) {
-            throw new IllegalArgumentException("통화가 다릅니다");
-        }
-        // 결과가 음수면 생성자의 음수 체크에서 예외 발생
-        return new Money(this.amount.subtract(other.amount), this.currency);
-    }
-
-    /** 뺄셈이 가능한지 확인 (결과가 0 이상인지) */
-    public boolean canSubtract(Money other) {
-        if (this.currency != other.currency) {
-            return false;
-        }
-        return this.amount.compareTo(other.amount) >= 0;
-    }
-
-    /** 안전한 뺄셈 - 결과가 음수면 Optional.empty() 반환 */
-    public Optional<Money> subtractSafe(Money other) {
-        if (!canSubtract(other)) {
-            return Optional.empty();
-        }
-        return Optional.of(new Money(this.amount.subtract(other.amount), this.currency));
-    }
-
-    public Money multiply(int factor) {
-        return new Money(this.amount.multiply(BigDecimal.valueOf(factor)), this.currency);
-    }
-
-    public Money multiply(BigDecimal factor) {
-        return new Money(this.amount.multiply(factor), this.currency);
-    }
-
-    public Money divide(int divisor) {
-        return new Money(
-            this.amount.divide(BigDecimal.valueOf(divisor), 2, RoundingMode.HALF_UP),
-            this.currency
-        );
-    }
-
-    public Money divide(BigDecimal divisor) {
-        return new Money(this.amount.divide(divisor, 2, RoundingMode.HALF_UP), this.currency);
-    }
-
-    public boolean isLessThan(Money other) {
-        if (this.currency != other.currency) {
-            throw new IllegalArgumentException("통화가 다릅니다");
-        }
-        return this.amount.compareTo(other.amount) < 0;
-    }
-
-    public boolean isGreaterThan(Money other) {
-        if (this.currency != other.currency) {
-            throw new IllegalArgumentException("통화가 다릅니다");
-        }
-        return this.amount.compareTo(other.amount) > 0;
-    }
-
-    public boolean isNegativeOrZero() {
-        return this.amount.compareTo(BigDecimal.ZERO) <= 0;
     }
 }
 
@@ -928,12 +865,33 @@ public record EmailAddress(String value) {
     }
 }
 
+public record PhoneNumber(String value) {
+    private static final Pattern PHONE_PATTERN = Pattern.compile("^01[0-9]-[0-9]{4}-[0-9]{4}$");
+
+    public PhoneNumber {
+        if (value == null || !PHONE_PATTERN.matcher(value).matches()) {
+            throw new IllegalArgumentException("유효하지 않은 전화번호: " + value);
+        }
+    }
+}
+
 // === 상품 도메인 ===
 
 public record ProductId(String value) {
     public ProductId {
         if (value == null || value.isBlank()) {
             throw new IllegalArgumentException("상품 ID는 비어있을 수 없습니다");
+        }
+    }
+}
+
+public record ProductName(String value) {
+    public ProductName {
+        if (value == null || value.isBlank()) {
+            throw new IllegalArgumentException("상품명은 비어있을 수 없습니다");
+        }
+        if (value.length() > 100) {
+            throw new IllegalArgumentException("상품명은 100자를 초과할 수 없습니다");
         }
     }
 }
@@ -1077,7 +1035,7 @@ D. 상품 가격 → `ProductPrice(BigDecimal value)`
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
@@ -1102,7 +1060,7 @@ D. 상품 가격 → `ProductPrice(BigDecimal value)`
 | **AND (Product Type)** | A **그리고** B | `record` | 주문 = 상품목록 AND 배송지 AND 결제정보 |
 | **OR (Sum Type)** | A **또는** B | `sealed interface` | 결제수단 = 카드 OR 계좌이체 OR 포인트 |
 
-#### 💡 비유: 햄버거 세트와 메뉴판
+#### 비유: 햄버거 세트와 메뉴판
 
 > **Product Type(AND)은 햄버거 세트와 같습니다.**
 >
@@ -1173,6 +1131,14 @@ public record OrderLine(
 }
 ```
 
+#### 비유: 신분증
+
+> **Record는 신분증처럼 여러 정보를 하나로 묶습니다.**
+>
+> 주민등록증에는 이름 **AND** 주민번호 **AND** 주소 **AND** 사진이 있습니다.
+> 이 중 하나라도 빠지면 유효한 신분증이 아닙니다.
+> 그리고 한번 발급되면 마음대로 수정할 수 없습니다 (불변).
+
 ---
 
 ### 3.3 Sum Type: Sealed Interface
@@ -1216,22 +1182,22 @@ public record SimplePay(
 public enum SimplePayProvider { KAKAO, NAVER, TOSS }
 ```
 
-> ⚠️ **흔한 실수**: `implements` 빠뜨림
->
-> Sealed Interface는 양방향 계약입니다. 부모가 `permits`로 자식을 지정했다면,
-> 자식도 `implements`로 부모를 명시해야 합니다.
->
-> ```java
-> // ❌ 컴파일 에러!
-> public sealed interface Discount permits PercentageOff, FixedAmountOff {}
-> public record PercentageOff(int value) {}  // implements Discount 빠짐!
-> public record FixedAmountOff(int value) {} // implements Discount 빠짐!
->
-> // ✅ 올바른 코드
-> public sealed interface Discount permits PercentageOff, FixedAmountOff {}
-> public record PercentageOff(int percent) implements Discount {}
-> public record FixedAmountOff(int amount) implements Discount {}
-> ```
+#### 왜 Enum이 아니라 Sealed Interface인가?
+
+```java
+// Enum의 한계: 각 케이스마다 다른 데이터를 가질 수 없음
+public enum PaymentType {
+    CREDIT_CARD,    // 카드번호, 유효기간은 어디에?
+    BANK_TRANSFER,  // 계좌번호는 어디에?
+    POINTS          // 이건 추가 데이터 없음
+}
+
+// Sealed Interface: 각 케이스가 다른 구조를 가질 수 있음
+sealed interface PaymentMethod permits CreditCard, BankTransfer, Points {}
+record CreditCard(CardNumber number, ExpiryDate expiry) implements PaymentMethod {}
+record BankTransfer(AccountNumber account) implements PaymentMethod {}
+record Points() implements PaymentMethod {}  // 데이터 없음도 OK
+```
 
 ---
 
@@ -1261,30 +1227,26 @@ public class PaymentProcessor {
         // card.cardNumber(), card.expiryDate() 등 타입 안전하게 접근
         return new PaymentResult.Success(generateReceiptNumber());
     }
+
     // ... 나머지 메서드들
 }
 ```
 
-> ⚠️ **흔한 실수**: `email.value` vs `email.value()` (메서드 호출!)
+#### 비유: 은행 창구
+
+> **Pattern Matching은 은행의 업무별 창구와 같습니다.**
 >
-> Record의 필드 접근은 **메서드 호출**입니다. 괄호를 빠뜨리면 컴파일 에러!
+> 은행에 가면 창구가 나뉘어 있습니다:
+> - 1번 창구: 예금/출금
+> - 2번 창구: 대출 상담
+> - 3번 창구: 환전
+> - 4번 창구: 카드 발급
 >
-> ```java
-> public void printContact(ContactInfo contact) {
->     String s = switch (contact) {
->         case EmailOnly email -> email.value;   // ❌ 컴파일 에러!
->         case PostOnly post -> post.value();    // ✅ 올바름
->     };
-> }
+> 손님(데이터)이 오면 업무 종류에 따라 해당 창구로 갑니다.
+> 모든 업무 유형에 대해 창구가 준비되어 있어야 합니다.
+> "5번: 기타 업무" 같은 애매한 창구(default)는 필요 없습니다.
 >
-> // 올바른 코드
-> public void printContact(ContactInfo contact) {
->     String s = switch (contact) {
->         case EmailOnly email -> email.value();  // ✅ 메서드 호출
->         case PostOnly post -> post.value();     // ✅ 메서드 호출
->     };
-> }
-> ```
+> Pattern Matching은 "모든 창구가 준비되었는지" 컴파일러가 확인해줍니다.
 
 #### Exhaustiveness Check (완전성 검사)
 
@@ -1305,7 +1267,7 @@ return switch (method) {
 };
 ```
 
-**이것이 Sum Type의 핵심 이점입니다.** 새로운 케이스를 추가하면 처리하지 않은 모든 곳에서 컴파일 에러가 발생합니다.
+**이것이 Sum Type의 핵심 이점입니다.** 새로운 케이스를 추가하면 처리하지 않은 모든 곳에서 컴파일 에러가 발생합니다. 런타임에 "처리되지 않은 케이스" 버그가 발생할 수 없습니다.
 
 ---
 
@@ -1342,7 +1304,7 @@ public record FixedAmountDiscount(Money discountAmount) implements CouponType {
 }
 
 // Case 2: 정률 할인 (예: 10% 할인)
-public record PercentageDiscount(DiscountRate rate) implements CouponType {
+public record PercentageDiscount(Percentage rate) implements CouponType {
     @Override
     public Money calculateDiscount(Money originalPrice) {
         return originalPrice.multiply(rate.value()).divide(100);
@@ -1494,35 +1456,6 @@ public String handlePaymentResult(PaymentResult result) {
 
 ---
 
-### 3.7 Optional의 올바른 사용
-
-> 📝 Optional과 NULL 문제의 심화 내용은 **Chapter 4.1**을 참고하세요.
-
-#### Optional 안티패턴
-
-```java
-// ❌ Record 필드로 Optional 사용 금지
-public record Order(OrderId id, Optional<Coupon> coupon) {}
-
-// ✅ 별도 타입으로 분리
-public sealed interface CouponChoice permits OrderWithCoupon, OrderWithoutCoupon {}
-
-// ❌ 파라미터로 Optional 사용 금지
-public void process(Optional<Coupon> coupon) {}
-
-// ✅ 메서드 오버로딩
-public void process(Coupon coupon) {}
-public void processWithoutCoupon() {}
-
-// ❌ Optional.get() 직접 호출 금지
-customer.get();  // NoSuchElementException 가능!
-
-// ✅ orElse, orElseThrow 사용
-customer.orElseThrow(() -> new NotFoundException());
-```
-
----
-
 ### 퀴즈 Chapter 3
 
 #### Q3.1 [개념 확인] Product Type vs Sum Type
@@ -1595,35 +1528,17 @@ D. 성능 문제가 있다
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
-## Chapter 4: 불가능한 상태 제거하기
+## Chapter 4: 불가능한 상태를 불가능하게
 
 ### 학습 목표
 1. NULL의 문제점과 Optional의 올바른 사용법을 이해한다
 2. State Machine 패턴으로 상태 전이를 안전하게 모델링할 수 있다
 3. 타입 시스템으로 비즈니스 규칙을 컴파일 타임에 강제할 수 있다
 4. "Make Illegal States Unrepresentable" 원칙을 실무에 적용할 수 있다
-
----
-
-### 🎯 [핵심 동기 예시] 왜 상태별 Entity가 필요한가?
-
-```java
-// ❌ 위험: 순서 강제 안 됨
-order.confirm();  // 검증 안 거쳤을 수도?
-order.ship();     // 확정 안 됐을 수도?
-
-// ✅ 안전: 타입으로 순서 강제
-ValidatedOrder validated = validateOrder(raw);      // UnvalidatedOrder → ValidatedOrder
-PricedOrder priced = priceOrder(validated);         // ValidatedOrder만 받음
-PlacedOrder placed = acknowledgeOrder(priced);      // PricedOrder만 받음
-// 검증 안 한 주문은 가격 계산 함수에 넣을 수 없음! 컴파일 에러!
-```
-
-**타입이 처리 순서를 강제합니다. 실수로 단계를 건너뛸 수 없습니다.**
 
 ---
 
@@ -1637,51 +1552,106 @@ PlacedOrder placed = acknowledgeOrder(priced);      // PricedOrder만 받음
 NULL은 "값이 없음"을 표현하지만, 타입 시스템에서 이를 구분할 수 없습니다.
 
 ```java
-// ❌ 위험한 코드: customer가 null일 수 있는지 시그니처만 봐서는 알 수 없음
+// 위험한 코드: customer가 null일 수 있는지 시그니처만 봐서는 알 수 없음
 public void sendEmail(Customer customer) {
     String email = customer.getEmail();  // NullPointerException 가능!
 }
+
+// 호출하는 쪽
+Customer customer = findCustomer(id);  // null일 수 있음
+sendEmail(customer);  // 컴파일 OK, 런타임에 폭발
 ```
 
-#### 💡 비유: 지뢰밭
+#### 비유: 지뢰밭
 
 > **NULL은 코드에 숨겨진 지뢰입니다.**
-> 어디에 지뢰가 있는지 표시가 없기 때문에 모든 발걸음이 위험합니다.
-> 결국 코드는 null 체크로 도배되고, 하나라도 빠뜨리면 런타임에 폭발합니다.
+>
+> 지뢰밭을 걸을 때는 모든 발걸음이 위험합니다.
+> 어디에 지뢰가 있는지 표시가 없기 때문입니다.
+>
+> NULL도 마찬가지입니다. 어떤 변수가 null일 수 있는지
+> 코드만 봐서는 알 수 없습니다.
+> 그래서 모든 변수를 의심하며 `if (x != null)` 검사를 해야 합니다.
+>
+> 결국 코드는 null 체크로 도배되고,
+> 하나라도 빠뜨리면 런타임에 폭발합니다.
 
 ---
 
-### 4.2 타입으로 비즈니스 규칙 표현
+### 4.2 Optional: 없을 수도 있음을 명시
 
-#### 💡 비유: USB 포트
-
-> **타입 제약은 USB 포트입니다.**
-> USB-C에 USB-A를 꽂으면 물리적으로 안 들어갑니다.
-> `VerifiedEmail`을 요구하는 곳에 `UnverifiedEmail`을 넣으면 컴파일러가 거부합니다.
+#### Optional의 올바른 사용
 
 ```java
-public record UnverifiedEmail(String value) {}
-public record VerifiedEmail(String value) {}
-
-public class MemberService {
-    // VerifiedEmail만 받음 - 인증 안 된 이메일로는 호출 불가!
-    public Member completeRegistration(VerifiedEmail email, String name) {
-        return new Member(MemberId.generate(), email, name);
-    }
+// Before: null 반환 (위험)
+public Customer findCustomer(CustomerId id) {
+    return customerMap.get(id);  // 없으면 null
 }
+
+// After: Optional로 명시
+public Optional<Customer> findCustomer(CustomerId id) {
+    return Optional.ofNullable(customerMap.get(id));
+}
+
+// 호출하는 쪽
+findCustomer(id)
+    .map(Customer::email)
+    .ifPresentOrElse(
+        this::sendWelcomeEmail,
+        () -> log.warn("Customer not found: " + id)
+    );
+```
+
+#### Optional 안티패턴
+
+```java
+// ❌ Record 필드로 Optional 사용 금지
+public record Order(OrderId id, Optional<Coupon> coupon) {}
+
+// ✅ 별도 타입으로 분리
+public sealed interface Order permits OrderWithCoupon, OrderWithoutCoupon {}
+
+// ❌ 파라미터로 Optional 사용 금지
+public void process(Optional<Coupon> coupon) {}
+
+// ✅ 메서드 오버로딩
+public void process(Coupon coupon) {}
+public void processWithoutCoupon() {}
+
+// ❌ Optional.get() 직접 호출 금지
+customer.get();  // NoSuchElementException 가능!
+
+// ✅ orElse, orElseThrow 사용
+customer.orElseThrow(() -> new NotFoundException());
 ```
 
 ---
 
-### 4.3 상태별 Entity 패턴 (xxxEntity)
+### 4.3 State Machine: 상태 전이를 타입으로
+
+#### 비유: 지하철 개찰구
+
+> **State Machine은 지하철 개찰구입니다.**
+>
+> 개찰구 상태:
+> - **잠김**: 카드를 찍어야 열림
+> - **열림**: 통과하면 다시 잠김
+>
+> 허용된 전이만 가능합니다.
+> 잘못된 전이(잠긴 상태에서 통과)는 물리적으로 막힙니다.
+>
+> 타입으로 State Machine을 구현하면
+> 컴파일러가 "잘못된 전이"를 막아줍니다.
 
 #### 타입으로 상태 전이 강제하기
 
 ```java
+// 각 상태를 별도 타입으로
 public sealed interface OrderState
     permits UnpaidOrder, PaidOrder, ShippingOrder, DeliveredOrder {}
 
 public record UnpaidOrder(OrderId id, Money total) implements OrderState {
+    // 결제하면 PaidOrder로 전이
     public PaidOrder pay(PaymentInfo payment) {
         return new PaidOrder(id, total, LocalDateTime.now(), payment);
     }
@@ -1689,6 +1659,7 @@ public record UnpaidOrder(OrderId id, Money total) implements OrderState {
 
 public record PaidOrder(OrderId id, Money total, LocalDateTime paidAt, PaymentInfo payment)
     implements OrderState {
+    // 배송 시작하면 ShippingOrder로 전이
     public ShippingOrder startShipping(TrackingNumber tracking) {
         return new ShippingOrder(id, paidAt, tracking, LocalDateTime.now());
     }
@@ -1696,10 +1667,16 @@ public record PaidOrder(OrderId id, Money total, LocalDateTime paidAt, PaymentIn
 
 public record ShippingOrder(OrderId id, LocalDateTime paidAt,
     TrackingNumber tracking, LocalDateTime shippedAt) implements OrderState {
+    // 배송 완료
     public DeliveredOrder complete() {
         return new DeliveredOrder(id, paidAt, tracking, LocalDateTime.now());
     }
     // cancel() 메서드 없음 - 배송 중 취소 불가!
+}
+
+public record DeliveredOrder(OrderId id, LocalDateTime paidAt,
+    TrackingNumber tracking, LocalDateTime deliveredAt) implements OrderState {
+    // 전이 메서드 없음 - 최종 상태
 }
 ```
 
@@ -1715,106 +1692,47 @@ shipping.cancel();  // 컴파일 에러! 메서드 없음
 
 ---
 
-### 4.4 Phantom Type 패턴: 보이지 않는 타입 제약
+### 4.4 타입으로 비즈니스 규칙 강제
 
-#### 💡 비유: 도장
+#### 비유: USB 포트
 
-> **Phantom Type은 문서의 도장과 같습니다.**
-> 문서 내용은 바뀌지 않지만, "검토 완료" 도장이 찍히면 다음 단계로 넘어갈 수 있습니다.
-> 도장은 문서의 실제 데이터가 아니지만, 프로세스 상태를 표시합니다.
+> **타입 제약은 USB 포트입니다.**
+>
+> USB-C에 USB-A를 꽂으면 물리적으로 안 들어갑니다.
+> 타입도 마찬가지입니다. `VerifiedEmail`을 요구하는 곳에
+> `UnverifiedEmail`을 넣으면 컴파일러가 거부합니다.
 
 ```java
-// Phantom Type을 사용한 상태 표현
-public sealed interface EmailState {}
-public record Unverified() implements EmailState {}
-public record Verified() implements EmailState {}
+// 인증되지 않은 이메일
+public record UnverifiedEmail(String value) {}
 
-// 상태를 제네릭 파라미터로 "표시"만 함 (런타임에 영향 없음)
-public record Email<S extends EmailState>(String value) {
-    public static Email<Unverified> unverified(String value) {
-        // 기본 검증 (형식만)
-        if (!value.contains("@")) {
-            throw new IllegalArgumentException("이메일 형식 오류");
-        }
-        return new Email<>(value);
-    }
-}
+// 인증된 이메일 (이메일 인증 서비스만 생성 가능)
+public record VerifiedEmail(String value) {}
 
-// 검증 서비스
-public class EmailVerificationService {
-    // Unverified 이메일만 받아서 Verified로 변환
-    public Email<Verified> verify(Email<Unverified> email, String code) {
-        if (verifyCode(email.value(), code)) {
-            return new Email<>(email.value());  // 같은 값, 다른 타입!
-        }
-        throw new VerificationFailedException();
-    }
-}
-
-// 회원 가입 완료 - Verified 이메일만 받음
 public class MemberService {
-    public Member register(Email<Verified> email, String name) {
-        return new Member(MemberId.generate(), email.value(), name);
+    // VerifiedEmail만 받음 - 인증 안 된 이메일로는 호출 불가!
+    public Member completeRegistration(VerifiedEmail email, String name) {
+        return new Member(MemberId.generate(), email, name);
     }
 }
-```
-
-#### 사용 예시
-
-```java
-Email<Unverified> rawEmail = Email.unverified("user@example.com");
-
-// ❌ 컴파일 에러! Unverified로는 회원 가입 불가
-memberService.register(rawEmail, "홍길동");
-
-// ✅ 검증 후 사용
-Email<Verified> verifiedEmail = verificationService.verify(rawEmail, "123456");
-memberService.register(verifiedEmail, "홍길동");  // OK!
-```
-
----
-
-### 4.5 Optional 안티패턴 심화
-
-Chapter 3.7에서 소개한 Optional 안티패턴을 실무 관점에서 더 자세히 살펴봅니다.
-
-#### 안티패턴 1: Optional을 컬렉션처럼 사용
-
-```java
-// ❌ 복잡하고 의도가 불명확
-Optional<Customer> customer = findCustomer(id);
-if (customer.isPresent()) {
-    Customer c = customer.get();
-    // ...
-}
-
-// ✅ 패턴 매칭 스타일로 명확하게
-findCustomer(id)
-    .ifPresentOrElse(
-        customer -> processCustomer(customer),
-        () -> handleNotFound()
-    );
-```
-
-#### 안티패턴 2: Optional 체이닝 남용
-
-```java
-// ❌ 너무 긴 체이닝은 가독성 저하
-return order.flatMap(Order::getCustomer)
-            .flatMap(Customer::getAddress)
-            .flatMap(Address::getCity)
-            .orElse("Unknown");
-
-// ✅ 도메인 타입으로 "없음"을 명시적으로 표현
-public sealed interface ShippingAddress permits
-    KnownAddress, UnknownAddress {}
 ```
 
 ---
 
 ### 퀴즈 Chapter 4
 
-#### Q4.1 [개념 확인] `ShippingOrder`에 `cancel()` 메서드가 없으면 어떤 효과가 있나요?
+#### Q4.1 [개념 확인] NULL의 문제
+NULL이 "10억 달러짜리 실수"라고 불리는 이유는?
+
+A. 메모리를 많이 사용해서
+B. 개발 시간이 많이 들어서
+C. NULL 가능 여부를 타입으로 표현할 수 없어 런타임 에러 발생
+D. Java에만 있어서
+
+---
+
+#### Q4.2 [코드 분석] State Machine
+`ShippingOrder`에 `cancel()` 메서드가 없으면 어떤 효과가 있나요?
 
 A. 예외가 발생한다
 B. if문으로 체크한다
@@ -1823,7 +1741,8 @@ D. DB 트리거로 막는다
 
 ---
 
-#### Q4.2 [설계 문제] "인증되지 않은 이메일로 주문 불가"를 타입으로 강제하려면?
+#### Q4.3 [설계 문제] 이메일 인증 규칙
+"인증되지 않은 이메일로 주문 불가"를 타입으로 강제하려면?
 
 A. 생성자에서 if문 체크
 B. `createOrder(VerifiedEmail email, ...)` 시그니처 사용
@@ -1832,34 +1751,27 @@ D. 런타임 예외
 
 ---
 
-#### Q4.3 [코드 분석] Phantom Type
+#### Q4.4 [코드 분석] Optional
+올바른 Optional 사용법은?
 
-다음 코드에서 `Email<Verified>`와 `Email<Unverified>`의 런타임 차이는?
-
-```java
-Email<Unverified> raw = Email.unverified("a@b.com");
-Email<Verified> verified = verificationService.verify(raw, "123456");
-```
-
-A. 내부 데이터 구조가 다르다
-B. 런타임에는 차이가 없고 컴파일 타임에만 구분된다
-C. Verified는 추가 검증 데이터를 저장한다
-D. 메모리 사용량이 다르다
+A. `record Order(Optional<Coupon> coupon)`
+B. `void process(Optional<String> name)`
+C. `Optional.get()`
+D. `findById(id).orElseThrow(() -> new NotFoundException())`
 
 ---
 
-#### Q4.4 [설계 문제] Optional vs 전용 타입
+#### Q4.5 [설계 문제] 불가능한 상태
+"배송 전에는 운송장 번호 없음"을 보장하는 방법은?
 
-"주문에 쿠폰이 적용될 수도 있고 안 될 수도 있다"를 모델링할 때 가장 적합한 방식은?
-
-A. `Optional<Coupon> coupon` 필드 사용
-B. `@Nullable Coupon coupon` 어노테이션
-C. `sealed interface CouponStatus permits WithCoupon, WithoutCoupon`
-D. `boolean hasCoupon` 플래그와 `Coupon coupon` 필드
+A. nullable 필드 + null 체크
+B. UnshippedOrder와 ShippedOrder 별도 타입
+C. @NotBlank 어노테이션
+D. DB 제약조건
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
@@ -1869,75 +1781,88 @@ D. `boolean hasCoupon` 플래그와 `Coupon coupon` 필드
 
 ## Chapter 5: 워크플로우를 함수 파이프라인으로
 
-#### 🎯 WHY: 비즈니스 프로세스 = 함수
+### 학습 목표
+1. 비즈니스 프로세스를 **Command → Process → Event** 구조로 이해한다
+2. 상태 전이를 타입 변환으로 표현할 수 있다
+3. 함수 합성으로 복잡한 워크플로우를 구성할 수 있다
+4. 각 단계의 책임을 명확히 분리할 수 있다
 
-#### 💡 비유: 공장 조립 라인
+---
+
+### 5.1 비즈니스 프로세스 = 함수
+
+#### 비유: 공장 조립 라인
 
 > **비즈니스 프로세스는 공장 조립 라인입니다.**
+>
 > - **철판** → 프레스 → **차체**
 > - **차체** → 도색 → **도색된 차체**
 > - **도색된 차체** → 조립 → **완성차**
+>
+> 소프트웨어도 마찬가지입니다. 우리는 입력을 받아 변환하고, 최종 결과를 만들어냅니다.
+> 함수형 아키텍처에서 가장 중요한 패턴은 **Command(명령)** 를 받아 **Event(사건)** 를 발생시키는 것입니다.
 
 ```
 주문 프로세스:
-  PlaceOrderCommand → [Validate] → ValidatedOrder
-                           ↓
-                      [Price] → PricedOrder
-                           ↓
-                      [Pay] → PaidOrder
-                           ↓
-                   OrderPlaced
+  PlaceOrderCommand (요청)
+      ↓
+  [Validate] → ValidatedOrder
+      ↓
+  [Price] → PricedOrder
+      ↓
+  [Pay] → PaidOrder
+      ↓
+  OrderPlacedEvent (결과)
 ```
 
 ---
 
-### 5.1 중간 타입으로 데이터 품질 표현
+### 5.2 워크플로우 타입 설계
 
 ```java
-// 1. 명령 (Command) - 사용자의 의도 (검증 전)
-public record UnvalidatedOrderLine(String productId, int quantity) {}
-
+// 1. 명령 (Command) - 사용자의 의도
 public record PlaceOrderCommand(
     String customerId,
     List<UnvalidatedOrderLine> lines,
-    String shippingAddress,
     String couponCode
 ) {}
 
-// 2. 검증 후 - 유효한 상태
-public record ValidatedOrderLine(ProductId productId, Quantity quantity, Money unitPrice) {}
-
+// 2. 검증 후 (도메인 타입) - 유효한 상태
 public record ValidatedOrder(
     CustomerId customerId,
     List<ValidatedOrderLine> lines,
-    ShippingAddress shippingAddress,
-    CouponCode couponCode
+    Optional<CouponCode> couponCode
 ) {}
 
-// 3. 가격 계산 후
-public record PricedOrder(CustomerId customerId, Money totalAmount) {}
+// 3. 가격 계산 후 - 계산된 상태
+public record PricedOrder(
+    CustomerId customerId,
+    List<PricedOrderLine> lines,
+    Money subtotal,
+    Money discount,
+    Money totalAmount
+) {}
 
-// 4. 이벤트 - 확정된 과거
-public record OrderPlaced(OrderId orderId, Money totalAmount, LocalDateTime occurredAt) {}
+// 4. 이벤트 (Event) - 확정된 과거
+public record OrderPlacedEvent(
+    OrderId orderId,
+    CustomerId customerId,
+    Money totalAmount,
+    LocalDateTime occurredAt
+) {}
 ```
-
-> ⚠️ **흔한 실수**: Record 알맹이 꺼내기/포장 미흡
->
-> ```java
-> // ❌ raw.trim() - raw는 RawText, trim()은 String 메서드
-> return raw.trim();
->
-> // ✅ new SanitizedText(raw.s().trim())
-> return new SanitizedText(raw.s().trim());
-> ```
 
 ---
 
-### 5.2 함수 합성
+### 5.3 함수 합성: 레고 블록
 
-#### 💡 비유: 레고 블록
+#### 비유: 레고 블록
 
+> **함수는 레고 블록입니다.**
+>
+> 레고는 규격화된 연결부가 있어서 조립 가능합니다.
 > 함수도 출력 타입 = 다음 입력 타입이면 조립됩니다.
+>
 > ```
 > f: A → B
 > g: B → C
@@ -1946,11 +1871,41 @@ public record OrderPlaced(OrderId orderId, Money totalAmount, LocalDateTime occu
 
 ```java
 public class PlaceOrderWorkflow {
-    public Result<OrderPlaced, OrderError> execute(PlaceOrderCommand command) {
+    public Result<OrderPlacedEvent, OrderError> execute(
+        PlaceOrderCommand command,
+        PaymentMethod paymentMethod
+    ) {
         return validateOrder.apply(command)
             .map(priceOrder::apply)
-            .flatMap(processPayment::apply)
-            .map(this::createOrderPlaced);
+            .flatMap(priced -> processPayment.apply(priced, paymentMethod))
+            .map(this::createOrderPlacedEvent);
+    }
+}
+```
+
+---
+
+### 5.4 각 단계 구현
+
+```java
+// 검증 단계
+public class OrderValidator implements ValidateOrder {
+    @Override
+    public Result<ValidatedOrder, ValidationError> apply(PlaceOrderCommand command) {
+        // 고객 ID 검증
+        // 상품 존재 확인
+        // 배송지 검증
+        return Result.success(new ValidatedOrder(...));
+    }
+}
+
+// 가격 계산 단계
+public class OrderPricer implements PriceOrder {
+    @Override
+    public PricedOrder apply(ValidatedOrder input) {
+        Money subtotal = calculateSubtotal(input.lines());
+        Money discount = calculateDiscount(input.couponCode(), subtotal);
+        return new PricedOrder(..., subtotal, discount, subtotal.subtract(discount));
     }
 }
 ```
@@ -1959,7 +1914,8 @@ public class PlaceOrderWorkflow {
 
 ### 퀴즈 Chapter 5
 
-#### Q5.1 [개념 확인] `PlaceOrderCommand`와 `ValidatedOrder`를 분리하는 이유는?
+#### Q5.1 [개념 확인] 워크플로우 타입
+`PlaceOrderCommand`와 `ValidatedOrder`를 분리하는 이유는?
 
 A. 메모리 절약
 B. 검증 전후의 데이터가 다른 보장을 가지므로
@@ -1968,7 +1924,53 @@ D. 디버깅 용이
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+#### Q5.2 [코드 분석] 파이프라인 실패
+`validateOrder`가 실패하면?
+
+```java
+validateOrder.apply(input)
+    .map(priceOrder::apply)
+    .flatMap(processPayment::apply);
+```
+
+A. priceOrder 실행 후 실패
+B. 즉시 실패, 이후 단계 미실행
+C. NullPointerException
+D. 모든 단계 실행 후 실패
+
+---
+
+#### Q5.3 [설계 문제] 결제 워크플로우
+"쿠폰 → 포인트 → 결제" 순서의 타입 설계로 적절한 것은?
+
+A. 같은 Order 타입 사용
+B. OrderWithCoupon → OrderWithPoints → PaidOrder
+C. String 상태 플래그
+D. Map<String, Object>
+
+---
+
+#### Q5.4 [코드 분석] 단계 분리 이점
+검증/가격계산 단계 분리의 이점이 아닌 것은?
+
+A. 독립적 테스트 가능
+B. 책임 명확
+C. 실행 속도 향상
+D. 코드 재사용 용이
+
+---
+
+#### Q5.5 [설계 문제] 이벤트 발행
+워크플로우 완료 시 이벤트 발행 이유는?
+
+A. DB 트랜잭션 대체
+B. 후속 작업을 느슨하게 결합
+C. 코드량 감소
+D. 컴파일 시간 단축
+
+---
+
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
@@ -1984,7 +1986,7 @@ D. 디버깅 용이
 
 ### 6.1 Exception의 문제점
 
-#### 💡 비유: 비상 탈출구 vs 두 갈래 길
+#### 비유: 비상 탈출구 vs 두 갈래 길
 
 > **Exception은 비상 탈출구입니다.**
 >
@@ -2033,7 +2035,7 @@ void methodC() { throw new SomeException(); }  // 바로 catch로 점프!
 
 ### 6.2 Result 타입: 철도 분기점
 
-#### 💡 비유: 철도 분기점
+#### 비유: 철도 분기점
 
 > **Result 타입은 철도 분기점입니다.**
 >
@@ -2048,8 +2050,6 @@ void methodC() { throw new SomeException(); }  // 바로 catch로 점프!
 
 ```java
 package com.ecommerce.common;
-
-import java.util.function.Function;
 
 // 성공(S) 또는 실패(F)를 담는 컨테이너
 public sealed interface Result<S, F> permits Success, Failure {
@@ -2070,14 +2070,6 @@ public sealed interface Result<S, F> permits Success, Failure {
     static <S, F> Result<S, F> failure(F error) {
         return new Failure<>(error);
     }
-
-    // 실패 값을 변환 (성공이면 그대로)
-    default <NewF> Result<S, NewF> mapError(Function<F, NewF> mapper) {
-        return switch (this) {
-            case Success<S, F> s -> (Result<S, NewF>) s;
-            case Failure<S, F> f -> Result.failure(mapper.apply(f.error()));
-        };
-    }
 }
 
 public record Success<S, F>(S value) implements Result<S, F> {
@@ -2093,18 +2085,11 @@ public record Failure<S, F>(F error) implements Result<S, F> {
 }
 ```
 
-> ⚠️ **흔한 실수**: `new` 키워드 누락
->
-> ```java
-> // ❌ return Success<>(new User(...));
-> // ✅ return new Success<>(new User(...));
-> ```
-
 ---
 
 ### 6.3 map과 flatMap: 역 환승
 
-#### 💡 비유: 역 환승
+#### 비유: 역 환승
 
 > **map은 같은 노선 내 이동입니다.**
 >
@@ -2150,17 +2135,6 @@ Result<PaidOrder, OrderError> result = validateOrder(input)
     .flatMap(this::processPayment);     // 결제 (실패 가능)
 ```
 
-> ⚠️ **흔한 실수**: 타입 불일치
->
-> ```java
-> String r = switch (result) {
->     case Success<Integer> s -> s.value();  // ❌ Integer인데 String 기대
->     case Failure<String> f -> f.error();
-> };
->
-> // ✅ String.valueOf(s.value())로 변환 필요
-> ```
-
 ---
 
 ### 6.4 ROP 패턴 적용
@@ -2195,7 +2169,9 @@ public class PlaceOrderWorkflow {
     }
 
     private Result<PricedOrder, OrderError> applyCoupon(ValidatedOrder order) {
-        return couponService.validate(order.couponCode())
+        return order.couponCode()
+            .map(code -> couponService.validate(code))
+            .orElse(Result.success(null))
             .map(coupon -> priceOrder(order, coupon));
     }
 
@@ -2226,7 +2202,7 @@ public sealed interface OrderError permits
     record PaymentFailed(String reason) implements OrderError {}
 }
 
-// 에러 처리 - 모든 케이스 처리 강제
+// 에러 처리
 String handleError(OrderError error) {
     return switch (error) {
         case OrderError.EmptyOrder e -> "주문 상품이 없습니다";
@@ -2279,7 +2255,33 @@ D. NullPointerException이 발생한다
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+#### Q6.4 [설계 문제] 에러 타입
+주문 에러를 모델링할 때 `sealed interface OrderError`를 사용하는 이유는?
+
+A. 메모리 절약
+B. 모든 에러 케이스를 컴파일 타임에 확인 가능
+C. 실행 속도 향상
+D. JSON 직렬화 용이
+
+---
+
+#### Q6.5 [코드 작성] Result 타입
+다음 빈칸에 들어갈 코드는?
+
+```java
+Result<ValidatedOrder, Error> result = validateOrder(input);
+Result<PricedOrder, Error> priced = result._____(this::calculatePrice);
+// calculatePrice의 시그니처: ValidatedOrder -> PricedOrder
+```
+
+A. flatMap
+B. map
+C. filter
+D. reduce
+
+---
+
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
@@ -2295,7 +2297,7 @@ D. NullPointerException이 발생한다
 
 ### 7.1 Validation vs Result
 
-#### 💡 비유: 시험 채점
+#### 비유: 시험 채점
 
 > **Result는 첫 번째 오답에서 멈추는 채점입니다.**
 >
@@ -2314,19 +2316,18 @@ Result<Order, Error> result = validateName(input)
     .flatMap(this::validatePhone);  // 이메일 실패하면 여기 안 감
 
 // Validation: 모든 에러 수집
-Validation<Order, List<Error>> result = Validation.combine3(
+Validation<Order, List<Error>> result = Validation.combine(
     validateName(input),
     validateEmail(input),
-    validatePhone(input),
-    Order::new
-);  // 모든 검증 결과를 모아서 처리
+    validatePhone(input)
+).map(Order::new);  // 모든 검증 결과를 모아서 처리
 ```
 
 ---
 
 ### 7.2 Applicative 패턴: 여러 창구 동시 처리
 
-#### 💡 비유: 은행 여러 창구
+#### 비유: 은행 여러 창구
 
 > **Applicative는 여러 창구에서 동시에 처리하는 것입니다.**
 >
@@ -2339,37 +2340,14 @@ Validation<Order, List<Error>> result = Validation.combine3(
 > 병렬 처리(Applicative): 세 창구 동시 처리, 결과 모아서 판단
 
 ```java
-import java.util.ArrayList;
-import java.util.List;
-import java.util.function.BiFunction;
-import java.util.function.Function;
-
-/**
- * Validation 타입 - 에러를 수집하는 Applicative 패턴 구현.
- * E 타입 파라미터는 에러 컬렉션 타입 (보통 List<SomeError>)을 나타냅니다.
- */
+// Validation 타입 정의
 public sealed interface Validation<S, E> permits Valid, Invalid {
-    // 성공
     static <S, E> Validation<S, E> valid(S value) {
         return new Valid<>(value);
     }
 
-    // 실패 (에러 컬렉션 전달)
-    static <S, E> Validation<S, E> invalid(E errors) {
-        return new Invalid<>(errors);
-    }
-
-    // 단일 에러로 Invalid 생성 (편의 메서드)
-    static <S, E> Validation<S, List<E>> invalidOne(E error) {
+    static <S, E> Validation<S, List<E>> invalid(E error) {
         return new Invalid<>(List.of(error));
-    }
-
-    // 성공 값 변환 (실패면 그대로)
-    default <NewS> Validation<NewS, E> map(Function<S, NewS> mapper) {
-        return switch (this) {
-            case Valid<S, E> v -> new Valid<>(mapper.apply(v.value()));
-            case Invalid<S, E> i -> new Invalid<>(i.errors());
-        };
     }
 
     // 여러 Validation 결합
@@ -2393,53 +2371,10 @@ public sealed interface Validation<S, E> permits Valid, Invalid {
             };
         };
     }
-
-    // 3개 결합
-    static <A, B, C, R, E> Validation<R, List<E>> combine3(
-        Validation<A, List<E>> va,
-        Validation<B, List<E>> vb,
-        Validation<C, List<E>> vc,
-        TriFunction<A, B, C, R> combiner
-    ) {
-        return combine(
-            combine(va, vb, Pair::new),
-            vc,
-            (ab, c) -> combiner.apply(ab.first(), ab.second(), c)
-        );
-    }
-
-    // 4개 결합
-    static <A, B, C, D, R, E> Validation<R, List<E>> combine4(
-        Validation<A, List<E>> va,
-        Validation<B, List<E>> vb,
-        Validation<C, List<E>> vc,
-        Validation<D, List<E>> vd,
-        QuadFunction<A, B, C, D, R> combiner
-    ) {
-        return combine(
-            combine(va, vb, Pair::new),
-            combine(vc, vd, Pair::new),
-            (ab, cd) -> combiner.apply(
-                ab.first(), ab.second(),
-                cd.first(), cd.second()
-            )
-        );
-    }
 }
 
 public record Valid<S, E>(S value) implements Validation<S, E> {}
-public record Invalid<S, E>(E errors) implements Validation<S, E> {}
-public record Pair<A, B>(A first, B second) {}
-
-@FunctionalInterface
-public interface TriFunction<A, B, C, R> {
-    R apply(A a, B b, C c);
-}
-
-@FunctionalInterface
-public interface QuadFunction<A, B, C, D, R> {
-    R apply(A a, B b, C c, D d);
-}
+public record Invalid<S, E>(List<E> errors) implements Validation<S, E> {}
 ```
 
 ---
@@ -2526,7 +2461,7 @@ public sealed interface ValidationError permits
 
 ### 7.4 Command와 Event
 
-#### 💡 비유: 주문서와 영수증
+#### 비유: 주문서와 영수증
 
 > **Command는 주문서입니다.**
 >
@@ -2653,7 +2588,7 @@ D. 짧아서
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
@@ -2673,18 +2608,20 @@ D. 짧아서
 
 ### 8.1 Persistence Ignorance
 
-#### 💡 비유: VIP와 매니저
+#### 비유: VIP와 매니저
 
 > **도메인 모델은 VIP입니다.**
+>
 > VIP는 자신의 전문 분야(비즈니스 로직)에만 집중합니다.
 > "데이터가 어디에 저장되는지", "어떤 DB를 쓰는지" 신경 쓰지 않습니다.
 >
 > **Repository는 매니저입니다.**
+>
 > 매니저가 VIP의 일정, 이동, 숙소를 모두 관리합니다.
 > VIP는 그냥 업무(비즈니스 로직)만 하면 됩니다.
 
 ```java
-// 도메인 모델: DB를 전혀 모름 (JPA 어노테이션 없음!)
+// 도메인 모델: DB를 전혀 모름
 public record Order(
     OrderId id,
     CustomerId customerId,
@@ -2697,7 +2634,8 @@ public record Order(
         if (!(status instanceof Unpaid || status instanceof Paid)) {
             throw new IllegalStateException("취소 불가능한 상태");
         }
-        return this with { status = new Cancelled(LocalDateTime.now(), reason); };
+        return new Order(id, customerId, lines, totalAmount,
+            new Cancelled(LocalDateTime.now(), reason));
     }
 }
 
@@ -2718,47 +2656,56 @@ public class JpaOrderRepository implements OrderRepository {
         return jpaRepository.findById(id.value())
             .map(mapper::toDomain);  // Entity → Domain 변환
     }
+
+    @Override
+    public Order save(Order order) {
+        OrderEntity entity = mapper.toEntity(order);  // Domain → Entity
+        OrderEntity saved = jpaRepository.save(entity);
+        return mapper.toDomain(saved);
+    }
 }
 ```
 
 ---
 
-### 8.2 Trust Boundary와 DTO
+### 8.2 신뢰 경계 (Trust Boundary)와 DTO
 
 #### 도메인 코어를 보호하라
+
+도메인 모델은 항상 유효한 상태만 가져야 합니다(Chapter 2, 4). 하지만 외부 세계(DB, UI, API)에서 들어오는 데이터는 믿을 수 없습니다.
 
 **신뢰 경계**:
 - **외부**: 신뢰할 수 없는 데이터 (JSON, String, Raw Data)
 - **경계**: 유효성 검사 및 변환 (DTO -> Domain Object)
 - **내부**: 신뢰할 수 있는 도메인 객체 (불변, 유효함)
 
+#### DTO의 역할
+
+도메인 객체를 그대로 JSON으로 직렬화하거나 DB에 저장하면 안 됩니다.
+- **DTO**: 데이터 전송만을 위한 깡통 객체 (public fields allowed)
+- **Domain Object**: 비즈니스 규칙이 있는 불변 객체
+
 ```java
 // DTO: 외부 통신용
 public class OrderDto {
     public String orderId;
     public BigDecimal amount;
+    // ...
 }
 
-// 도메인 요약 모델
-public record OrderSummary(OrderId orderId, Money amount) {}
-
 // 변환: DTO -> Domain (입력)
-public Result<OrderSummary, String> toDomain(OrderDto dto) {
-    try {
-        return Result.success(new OrderSummary(
-            new OrderId(dto.orderId),
-            new Money(dto.amount, Currency.KRW)
-        ));
-    } catch (IllegalArgumentException e) {
-        return Result.failure(e.getMessage());
-    }
+public Result<Order, Error> toDomain(OrderDto dto) {
+    // 여기서 검증 실패하면 도메인으로 진입 불가
+    return OrderId.create(dto.orderId)
+        .combine(Money.create(dto.amount))
+        .map(Order::new);
 }
 
 // 변환: Domain -> DTO (출력)
-public OrderDto toDto(OrderSummary order) {
+public OrderDto toDto(Order order) {
     OrderDto dto = new OrderDto();
-    dto.orderId = order.orderId().value();
-    dto.amount = order.amount().amount();
+    dto.orderId = order.id().value();
+    dto.amount = order.total().amount();
     return dto;
 }
 ```
@@ -2767,27 +2714,46 @@ public OrderDto toDto(OrderSummary order) {
 
 ### 8.3 Anti-Corruption Layer
 
-#### 💡 비유: 통역사
+#### 비유: 통역사
 
 > **ACL은 통역사입니다.**
+>
 > 외국 손님(외부 시스템)이 오면 통역사가 번역합니다.
 > 우리 팀(도메인)은 우리 언어(도메인 타입)만 사용합니다.
+>
+> 외국어(외부 API 형식)가 바뀌어도
+> 통역사(ACL)만 수정하면 됩니다.
 
 ```java
-// 외부 결제 API 응답
+// 외부 결제 API 응답 (우리가 제어할 수 없음)
 public record ExternalPaymentResponse(
     String result_code,      // "0000" = 성공
     String result_msg,
-    String transaction_id
+    String transaction_id,
+    String approved_amount,
+    String approved_at       // "20240115143022"
 ) {}
 
 // ACL: 외부 형식 → 도메인 형식 변환
 public class PaymentGatewayAdapter {
-    public Result<PaymentApproval, PaymentError> processPayment(PaymentRequest request) {
+
+    private final ExternalPaymentClient externalClient;
+
+    public Result<PaymentApproval, PaymentError> processPayment(
+        PaymentRequest request
+    ) {
         try {
-            ExternalPaymentResponse response = externalClient.pay(request);
+            // 외부 API 호출
+            ExternalPaymentResponse response = externalClient.pay(
+                request.amount().toString(),
+                request.cardNumber()
+            );
+
+            // 외부 형식 → 도메인 형식 변환
             return translateResponse(response);
+
         } catch (ExternalApiException e) {
+            // 외부 예외 → 도메인 에러로 변환
             return Result.failure(new PaymentError.SystemError(e.getMessage()));
         }
     }
@@ -2795,42 +2761,27 @@ public class PaymentGatewayAdapter {
     private Result<PaymentApproval, PaymentError> translateResponse(
         ExternalPaymentResponse response
     ) {
+        // 외부 코드 해석
         if (!"0000".equals(response.result_code())) {
             return Result.failure(translateErrorCode(response.result_code()));
         }
+
+        // 외부 형식 → 도메인 타입
         return Result.success(new PaymentApproval(
-            new TransactionId(response.transaction_id())
+            new TransactionId(response.transaction_id()),
+            Money.krw(Long.parseLong(response.approved_amount())),
+            parseDateTime(response.approved_at())
         ));
     }
-}
-```
 
----
-
-### 8.4 toDomain() 위치: Controller가 변환 (문지기 역할)
-
-서비스 메서드 시그니처가 **타입(Type) 그 자체로 문서**가 되어야 합니다.
-
-```java
-// [Controller] - 문지기 역할
-@PostMapping("/users")
-public Result<Void, String> registerUser(@RequestBody UserDTO dto) {
-    // 1. 여기서 변환 및 1차 검증
-    User user = UserMapper.toDomain(dto);
-
-    // 2. 서비스에는 '순수한 도메인 객체'만 넘김
-    return userService.register(user);
-}
-
-// [Service] - 비즈니스 로직 전담
-public Result<Void, String> register(User user) {
-    // 이미 'User' 타입이므로 이름이 비었거나 나이가 음수일 확률 0%
-    // 중복 가입 여부 등 '비즈니스 로직'에만 집중!
-    if (userRepository.exists(user.username())) {
-        return Result.failure("이미 존재하는 유저입니다.");
+    private PaymentError translateErrorCode(String code) {
+        return switch (code) {
+            case "1001" -> new PaymentError.InsufficientFunds();
+            case "1002" -> new PaymentError.CardExpired();
+            case "1003" -> new PaymentError.InvalidCard();
+            default -> new PaymentError.Unknown(code);
+        };
     }
-    userRepository.save(user);
-    return Result.success(null);
 }
 ```
 
@@ -2838,7 +2789,8 @@ public Result<Void, String> register(User user) {
 
 ### 퀴즈 Chapter 8
 
-#### Q8.1 도메인 모델이 JPA 어노테이션을 직접 가지면 안 되는 이유는?
+#### Q8.1 [개념 확인] Persistence Ignorance
+도메인 모델이 JPA 어노테이션을 직접 가지면 안 되는 이유는?
 
 A. 성능이 느려져서
 B. 도메인이 인프라(DB)에 의존하게 되어 결합도가 높아짐
@@ -2887,7 +2839,7 @@ D. Request → Domain 변환
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
@@ -2903,7 +2855,7 @@ D. Request → Domain 변환
 
 ### 9.1 Onion Architecture
 
-#### 💡 비유: 양파 껍질
+#### 비유: 양파 껍질
 
 > **아키텍처는 양파입니다.**
 >
@@ -2911,7 +2863,9 @@ D. Request → Domain 변환
 > - **중간층**: 애플리케이션 서비스 - 유스케이스 조율
 > - **바깥층**: 인프라 - DB, 외부 API, 웹 프레임워크
 >
-> **의존성은 항상 안쪽으로 향합니다.** 도메인은 아무것도 의존하지 않습니다.
+> **의존성은 항상 안쪽으로 향합니다.**
+> 도메인은 아무것도 의존하지 않습니다.
+> 인프라가 도메인에 의존합니다.
 
 ```
 ┌─────────────────────────────────────────────────────────┐
@@ -2932,13 +2886,31 @@ D. Request → Domain 변환
 └─────────────────────────────────────────────────────────┘
 ```
 
-> **중요**: Repository Interface는 **domain 패키지**에 위치합니다! (DIP)
->
-> Domain: "나는 저장을 하고 싶어. 하지만 DB가 Oracle인지 MySQL인지, 파일인지 알 바 아니야."
-> → 인터페이스 정의 (OrderRepository)
->
-> Infra: "도메인 주인님, 제가 그 인터페이스에 맞춰서 JPA로 구현해 왔습니다."
-> → 구현체 (OrderRepositoryImpl)
+```java
+// === Domain Layer (Core) - 의존성 없음 ===
+package com.ecommerce.domain;
+
+public record Order(...) { /* 순수 비즈니스 로직 */ }
+public interface OrderRepository { /* 인터페이스만 */ }
+
+// === Application Layer (Use Cases) ===
+package com.ecommerce.application;
+
+public class PlaceOrderUseCase {
+    private final OrderRepository repository;  // 인터페이스에 의존
+
+    public Result<OrderPlaced, OrderError> execute(PlaceOrderCommand cmd) {
+        // 도메인 로직 조율
+    }
+}
+
+// === Infrastructure Layer (구현체) ===
+package com.ecommerce.infrastructure;
+
+public class JpaOrderRepository implements OrderRepository {
+    // JPA 의존성은 여기만
+}
+```
 
 ---
 
@@ -2973,7 +2945,7 @@ public class PriceService {
 GetExchangeRate realExchangeRate = new RealExchangeRateApi();
 
 // 의존성 주입: 함수를 부분 적용하여 새로운 함수 생성
-Function<Money, Money> krwConverter =
+Function<Money, Money> krwConverter = 
     price -> priceService.convertPrice(price, Currency.KRW, realExchangeRate);
 
 // 사용 단계: 의존성을 몰라도 됨
@@ -2984,7 +2956,7 @@ Money krw = krwConverter.apply(usd100);
 
 ### 9.3 부수효과 격리
 
-#### 💡 비유: 회계사와 금고
+#### 비유: 회계사와 금고
 
 > **순수 함수는 회계사입니다.**
 >
@@ -2996,100 +2968,81 @@ Money krw = krwConverter.apply(usd100);
 > 회계사의 지시(결과)에 따라
 > 금고 관리인이 실제로 돈을 옮깁니다.
 
----
-
-### 9.4 Functional Core, Imperative Shell
-
-> "우리 팀은 Spring 쓰고 JPA 쓰는데요?" 100% 순수하게 짤 수는 없습니다.
-> 현실적인 타협점: **Functional Core, Imperative Shell**
-
-**Functional Core (순수 영역)**:
-- 비즈니스 로직, 계산, 판단, 데이터 변환 등 **"머리 쓰는 일"**은 순수 함수로
-- Mock 없이 빡세게 테스트
-
-**Imperative Shell (불순 영역)**:
-- DB 저장, API 호출, 로그 출력 등 **"몸 쓰는 일"**은 바깥쪽으로
-- 로직이 거의 없게 만들어서 테스트 부담 감소
-
 ```java
 // 순수한 도메인 로직 (부수효과 없음)
 public class OrderDomainService {
-    // 입력 → 출력, 외부 의존성 없음
-    // Optional을 파라미터로 받지 않고 메서드 오버로딩 사용
-    public PricedOrder calculatePrice(ValidatedOrder order) {
-        return calculatePrice(order, Money.ZERO);
-    }
 
+    // 입력 → 출력, 외부 의존성 없음
     public PricedOrder calculatePrice(ValidatedOrder order, Coupon coupon) {
         Money subtotal = order.lines().stream()
             .map(line -> line.price().multiply(line.quantity()))
             .reduce(Money.ZERO, Money::add);
 
-        Money discount = coupon.calculateDiscount(subtotal);
+        Money discount = coupon != null
+            ? coupon.calculateDiscount(subtotal)
+            : Money.ZERO;
 
-        return new PricedOrder(order.customerId(), order.lines(),
-            subtotal, discount, subtotal.subtract(discount));
+        return new PricedOrder(
+            order.customerId(),
+            order.lines(),
+            subtotal,
+            discount,
+            subtotal.subtract(discount)
+        );
     }
 
-    // 내부에서만 사용하는 private 메서드
-    private PricedOrder calculatePrice(ValidatedOrder order, Money discount) {
-        Money subtotal = order.lines().stream()
-            .map(line -> line.price().multiply(line.quantity()))
-            .reduce(Money.ZERO, Money::add);
-
-        return new PricedOrder(order.customerId(), order.lines(),
-            subtotal, discount, subtotal.subtract(discount));
+    // 주문 취소 가능 여부 판단 (순수 함수)
+    public boolean canCancel(Order order) {
+        return switch (order.status()) {
+            case Unpaid u -> true;
+            case Paid p -> p.paidAt().plusHours(24).isAfter(LocalDateTime.now());
+            default -> false;
+        };
     }
 }
 
 // 부수효과를 가진 애플리케이션 서비스
 public class PlaceOrderUseCase {
+
     private final OrderRepository orderRepository;      // 부수효과: DB
     private final PaymentGateway paymentGateway;        // 부수효과: 외부 API
+    private final EventPublisher eventPublisher;        // 부수효과: 이벤트
+
     private final OrderDomainService domainService;     // 순수 로직
 
-    @Transactional
     public Result<OrderPlaced, OrderError> execute(PlaceOrderCommand cmd) {
-        // 1. 검증 및 보강 (예시)
-        ValidatedOrder validated = validateOrder(cmd);
-        Coupon coupon = findCoupon(cmd);
+        // 1. 부수효과: DB에서 데이터 조회
+        Customer customer = customerRepository.findById(cmd.customerId())
+            .orElseThrow();
+        List<Product> products = productRepository.findAllById(cmd.productIds());
 
         // 2. 순수 로직: 가격 계산 (테스트 쉬움)
-        PricedOrder priced = domainService.calculatePrice(validated, coupon);
+        PricedOrder priced = domainService.calculatePrice(order, coupon);
 
         // 3. 부수효과: 결제
         PaymentResult payment = paymentGateway.charge(priced.totalAmount());
 
         // 4. 부수효과: 저장
-        Order order = createOrder(validated, payment);
         Order savedOrder = orderRepository.save(order);
 
+        // 5. 부수효과: 이벤트 발행
+        eventPublisher.publish(new OrderPlaced(savedOrder.id()));
+
         return Result.success(new OrderPlaced(savedOrder.id()));
-    }
-
-    // 예시용 스텁
-    private ValidatedOrder validateOrder(PlaceOrderCommand cmd) {
-        throw new UnsupportedOperationException("검증 로직 생략");
-    }
-
-    private Coupon findCoupon(PlaceOrderCommand cmd) {
-        throw new UnsupportedOperationException("쿠폰 조회 로직 생략");
-    }
-
-    private Order createOrder(ValidatedOrder order, PaymentResult payment) {
-        throw new UnsupportedOperationException("주문 생성 로직 생략");
     }
 }
 ```
 
 ---
 
-### 9.5 순수 함수와 테스트
+### 9.4 순수 함수와 테스트
 
-#### 💡 비유: 계산기
+#### 비유: 계산기
 
 > **순수 함수는 계산기입니다.**
-> 같은 버튼을 누르면 항상 같은 결과. 언제 어디서 눌러도 1 + 1 = 2.
+>
+> 같은 버튼을 누르면 항상 같은 결과.
+> 언제 어디서 눌러도 1 + 1 = 2.
 >
 > 테스트하기 매우 쉽습니다:
 > - 입력 준비
@@ -3100,6 +3053,7 @@ public class PlaceOrderUseCase {
 
 ```java
 class OrderDomainServiceTest {
+
     private final OrderDomainService service = new OrderDomainService();
 
     @Test
@@ -3107,7 +3061,9 @@ class OrderDomainServiceTest {
         // Given: 순수한 입력 데이터
         var order = new ValidatedOrder(
             new CustomerId(1L),
-            List.of(new ValidatedOrderLine(productId, quantity(2), Money.krw(10000)))
+            List.of(
+                new ValidatedOrderLine(productId, quantity(2), Money.krw(10000))
+            )
         );
         var coupon = new PercentageCoupon(10);  // 10% 할인
 
@@ -3188,7 +3144,7 @@ D. IDE 지원이 좋아서
 
 ---
 
-정답은 Appendix D에서 확인할 수 있습니다.
+정답은 Appendix C에서 확인할 수 있습니다.
 
 ---
 
@@ -3219,16 +3175,6 @@ public sealed interface MemberGrade permits Bronze, Silver, Gold, Vip {
 
 public record Bronze() implements MemberGrade {
     @Override public int discountRate() { return 0; }
-    @Override public boolean hasFreeShipping() { return false; }
-}
-
-public record Silver() implements MemberGrade {
-    @Override public int discountRate() { return 5; }
-    @Override public boolean hasFreeShipping() { return false; }
-}
-
-public record Gold() implements MemberGrade {
-    @Override public int discountRate() { return 8; }
     @Override public boolean hasFreeShipping() { return false; }
 }
 
@@ -3274,15 +3220,22 @@ package com.ecommerce.domain.product;
 // === 컨텍스트별 상품 모델 ===
 
 // 전시용 (Display Context)
-public record DisplayProduct(ProductId id, ProductName name, List<String> imageUrls, Money price) {}
+public record DisplayProduct(
+    ProductId id, ProductName name, List<String> imageUrls,
+    Money price, double rating
+) {}
 
 // 재고용 (Inventory Context)
-public record InventoryProduct(ProductId id, StockQuantity stock, WarehouseLocation location) {
+public record InventoryProduct(
+    ProductId id, StockQuantity stock, WarehouseLocation location
+) {
     public boolean isAvailable(int qty) { return stock.value() >= qty; }
 }
 
 // 정산용 (Settlement Context)
-public record SettlementProduct(ProductId id, SellerId sellerId, Money supplyPrice, FeeRate feeRate) {}
+public record SettlementProduct(
+    ProductId id, SellerId sellerId, Money supplyPrice, FeeRate feeRate
+) {}
 
 // === 상품 상태 (Sum Type) ===
 public sealed interface ProductStatus permits Draft, OnSale, SoldOut, Discontinued {
@@ -3333,9 +3286,7 @@ public record Order(
         return switch (status) {
             case Unpaid u -> true;
             case Paid p -> p.paidAt().plusHours(24).isAfter(LocalDateTime.now());
-            case Shipping s -> false;
-            case Delivered d -> false;
-            case Cancelled c -> false;
+            default -> false;
         };
     }
 }
@@ -3349,12 +3300,15 @@ public record Order(
 package com.ecommerce.domain.payment;
 
 // === 결제 수단 (Sum Type) ===
-public sealed interface PaymentMethod permits CreditCard, BankTransfer, Points, SimplePay {
+public sealed interface PaymentMethod
+    permits CreditCard, BankTransfer, Points, SimplePay {
     record CreditCard(CardNumber num, ExpiryDate exp) implements PaymentMethod {}
     record BankTransfer(BankCode bank, AccountNumber acc) implements PaymentMethod {}
     record Points(int amount) implements PaymentMethod {}
     record SimplePay(Provider provider, String token) implements PaymentMethod {}
 }
+
+public enum Provider { KAKAO, NAVER, TOSS }
 
 // === 결제 결과 (Sum Type) ===
 public sealed interface PaymentResult permits Success, Failure {
@@ -3362,9 +3316,6 @@ public sealed interface PaymentResult permits Success, Failure {
     record Failure(PaymentError error) implements PaymentResult {}
 }
 
-public enum Provider { KAKAO, NAVER, TOSS }
-
-// === 결제 에러 (Sum Type) ===
 public sealed interface PaymentError
     permits InsufficientFunds, CardExpired, SystemError {
     record InsufficientFunds(Money required) implements PaymentError {}
@@ -3431,300 +3382,81 @@ public record Coupon(CouponId id, CouponType type, CouponStatus status, Money mi
 
 ### 퀴즈 Chapter 10
 
-#### Q10.1 [설계 문제] VIP 무료배송을 타입으로 표현하는 방법은?
-A. boolean 필드
-B. sealed interface의 메서드로 정의
-C. 별도 서비스 클래스
-D. if문으로 처리
+#### Q10.1 VIP 무료배송을 타입으로 표현하는 방법은?
+A. boolean 필드  B. interface 메서드 **정답**  C. 별도 서비스  D. if문
+
+#### Q10.2 컨텍스트별 상품 분리 이유는?
+A. 코드량 증가  B. 필요한 데이터만 포함 **정답**  C. 상속 회피  D. 성능
+
+#### Q10.3 Shipping에 cancel()이 없는 이유는?
+A. 메모리  B. 타입으로 규칙 강제 **정답**  C. 단순화  D. 성능
+
+#### Q10.4 Mixed 결제를 Sum Type으로 표현하는 이점은?
+A. 메모리  B. 타입 안전한 처리 **정답**  C. 속도  D. 가독성 저하
+
+#### Q10.5 쿠폰 use()가 Result를 반환하는 이유는?
+A. 복잡성  B. 실패 가능성 **정답**  C. 컨벤션  D. 성능
 
 ---
 
-#### Q10.2 [개념 확인] 컨텍스트별 상품 분리(DisplayProduct, InventoryProduct, SettlementProduct) 이유는?
-A. 코드량 증가를 위해
-B. 각 컨텍스트에 필요한 데이터만 포함하기 위해
-C. 상속을 회피하기 위해
-D. 성능 향상을 위해
+# Appendix A: 흔한 안티패턴
+
+| 안티패턴 | 개선 방법 |
+|---------|----------|
+| Primitive Obsession | 도메인 타입(Record) 사용 |
+| Null 남용 | Optional 또는 타입 분리 |
+| String 상태 | Sealed Interface |
+| God Class | 컨텍스트별 분리 |
+| Exception 흐름제어 | Result 타입 |
+| JPA 어노테이션 in 도메인 | Entity/Domain 분리 |
+| Optional 필드 | Sealed Interface로 분리 |
+| 가변 컬렉션 노출 | List.copyOf() |
 
 ---
 
-#### Q10.3 [코드 분석] Shipping 상태에 cancel() 메서드가 없는 이유는?
-A. 메모리 절약
-B. 타입으로 비즈니스 규칙(배송 중 취소 불가)을 강제하기 위해
-C. 코드 단순화
-D. 성능 향상
-
----
-
-#### Q10.4 [개념 확인] 결제 수단을 Sum Type(sealed interface)으로 표현하는 이점은?
-A. 메모리 절약
-B. 모든 결제 수단을 타입 안전하게 처리 가능
-C. 실행 속도 향상
-D. 코드 가독성 저하
-
----
-
-#### Q10.5 [코드 분석] 쿠폰의 use()가 Result를 반환하는 이유는?
-A. 코드 복잡성 증가
-B. 쿠폰 사용이 실패할 수 있는 경우를 명시적으로 표현
-C. 컨벤션
-D. 성능 향상
-
----
-
-정답은 Appendix D에서 확인할 수 있습니다.
-
----
-
-# 부록
-
----
-
-## Appendix A: 흔한 실수 모음 (⚠️ 경고)
-
-| 실수 | 올바른 코드 | 참고 |
-|------|------------|------|
-| `quantity < 0` 검증 | `quantity < 1` (0도 막아야) | Ch.2 Compact Constructor |
-| `implements` 누락 | `record X() implements Y {}` | Ch.3 Sealed Interface |
-| `value` vs `value()` | Record는 메서드 호출 필요 | Ch.3 Pattern Matching |
-| 타입 캐스팅 누락 | `(long)(price * rate)` | Ch.2 금액 계산 |
-| `new` 키워드 누락 | `new Success<>(...)` | Ch.6 Result 타입 |
-| `raw.trim()` | `new SanitizedText(raw.s().trim())` | Ch.5 파이프라인 |
-
----
-
-## Appendix B: Java 25 함수형 Cheat Sheet
-
-### Record (불변 데이터)
+# Appendix B: Java 25 치트시트
 
 ```java
-// 기본 Record
+// Record (불변 데이터)
 public record Money(BigDecimal amount) {
-    public Money {
-        if (amount.signum() < 0) throw new IllegalArgumentException();
-    }
+    public Money { if (amount.signum() < 0) throw new IllegalArgumentException(); }
     public Money add(Money o) { return new Money(amount.add(o.amount)); }
 }
 
-// Java 25 with 구문 (Derived Record Creation)
-Order oldOrder = new Order(id, status, total);
-Order newOrder = oldOrder with { status = OrderStatus.PAID; };
-```
-
-### Sealed Interface (Sum Type)
-
-```java
+// Sealed Interface (Sum Type)
 public sealed interface Result<S,F> permits Success, Failure {}
 public record Success<S,F>(S value) implements Result<S,F> {}
 public record Failure<S,F>(F error) implements Result<S,F> {}
-```
 
-### Pattern Matching
-
-```java
-// sealed interface OrderStatus permits Unpaid, Paid, Shipping, Delivered, Cancelled
+// Pattern Matching
 String msg = switch (status) {
-    case Unpaid u -> "결제 대기";
-    case Paid p when p.paidAt().plusDays(1).isAfter(now) -> "취소 가능";
-    case Paid p -> "취소 불가";
-    case Shipping s -> "배송 중";
-    case Delivered d -> "배송 완료";
-    case Cancelled c -> "취소됨";
-    // sealed interface면 default 불필요!
+    case Unpaid u -> "대기";
+    case Paid p when p.paidAt().plusDays(1).isAfter(now) -> "취소가능";
+    case Paid p -> "취소불가";
+    default -> "기타";
 };
-```
 
-### Optional
-
-```java
+// Optional
 opt.map(f).flatMap(g).orElseThrow(() -> new NotFoundException());
 ```
 
-### var 타입 추론
-
-```java
-var validator = new OrderValidator();
-var result = validator.validate(order);
-```
-
 ---
 
-## Appendix C: 심화 Q&A
-
-### Q1. 객체를 계속 새로 만들면 메모리가 터지지 않나요?
-
-**결론: 전혀 걱정하지 않으셔도 됩니다.**
-
-현대의 JVM(특히 G1GC, ZGC)은 **"짧게 살고 죽는 객체(Short-lived Object)"**를 처리하는 데 극도로 최적화되어 있습니다.
-
-- **에덴(Eden) 영역의 마법**: 대부분의 record나 불변 객체는 생성되자마자 잠깐 쓰이고 버려집니다. JVM의 가비지 컬렉터(GC) 입장에서 이런 객체들은 청소 비용이 거의 '0'에 수렴합니다.
-- **구조적 공유 (Structural Sharing)**: `new Order(..., newAddress)`를 할 때, 기존 Order의 모든 데이터를 복사하는 게 아닙니다. 기존 데이터는 참조(Reference)만 복사해서 재사용합니다.
-- **탈출 분석 (Escape Analysis)**: JIT 컴파일러가 "이 객체는 메서드 밖으로 안 나가네?"라고 판단하면, 힙이 아닌 스택에 할당해버립니다.
-
-### Q2. G1GC와 ZGC가 뭔가요?
-
-**G1GC (Garbage First GC)**: Java 9~18의 기본 GC. 거대한 힙을 작은 Region으로 쪼개서, 쓰레기가 가장 많은 구역부터 청소합니다.
-
-**ZGC (Z Garbage Collector)**: Java 21+의 차세대 GC. 청소를 애플리케이션 실행 중에 몰래 수행합니다. 힙 크기에 상관없이 멈추는 시간이 1ms 미만입니다.
-
-### Q3. toDomain()은 Controller vs Service 어디에?
-
-**정석: Controller에서 변환합니다.**
-
-서비스 메서드 시그니처가 타입(Type) 그 자체로 문서가 되어야 합니다.
-
-```java
-// Service가 DTO를 받을 때: 불안함
-void register(UserDTO dto)  // dto 안에 쓰레기 값 있을 수도
-
-// Service가 Domain을 받을 때: 안전함
-void register(User user)    // User 타입이면 이미 검증 완료
-```
-
-### Q4. Repository 인터페이스는 어느 패키지에?
-
-**위치: domain 패키지**
-
-이것이 **의존성 역전 원칙(DIP)**의 핵심입니다.
-- Domain은 인터페이스만 정의 (OrderRepository)
-- Infra는 구현체 제공 (JpaOrderRepository)
-
-만약 인터페이스가 infra에 있다면, Domain이 Infra를 import해야 합니다. DB 기술 변경 시 도메인 코드도 수정해야 하는 불상사가 생깁니다.
-
-### Q5. 패키지 상호 참조가 발생하면 무슨 문제?
-
-**스파게티 코드가 되어 유지보수가 불가능해집니다.**
-
-- **컴파일 지옥**: A 컴파일하려니 B 필요, B 하려니 A 필요
-- **테스트 불가능**: 단위 테스트하려는데 연쇄적으로 의존성 딸려옴
-- **변경의 전파**: DB 스키마 바꿨는데 할인 로직에서 에러 발생
-
-### Q6. 순수 함수의 본질은 무엇인가요?
-
-**참조 투명성(Referential Transparency)**: "언제, 어디서, 누가 실행하든 입력이 같으면 결과가 무조건 같아야 한다. 그리고 그 외에는 아무 일도 일어나지 않아야 한다."
-
-`System.out.println`도 부수 효과입니다:
-- 모니터라는 외부 세계의 상태를 변경
-- 실행 환경에 따라 동작이 달라질 수 있음
-
-### Q7. 팀이 FP를 안 하는데 순수 함수로 짜면 좋은가요?
-
-**네, 무조건 좋습니다!**
-
-1. **테스트의 천국**: Mock 없이 `assert(f(input) == expected)` 한 줄로 끝
-2. **Local Reasoning**: 버그 추적 시 함수 안만 보면 됨
-3. **동시성 안전**: 값을 안 바꾸니 락 불필요
-
-### Q8. 순수 함수 적용 전략은?
-
-**Functional Core, Imperative Shell**
-
-- **Functional Core**: 비즈니스 로직, 계산, 판단 → 순수 함수로
-- **Imperative Shell**: DB 저장, API 호출, 로그 출력 → 바깥쪽으로
-
-복잡한 로직만 순수 함수로 분리해도 디버깅 시간이 절반으로 줄어듭니다.
-
----
-
-## Appendix D: 전체 퀴즈 정답
+# Appendix C: 전체 정답
 
 | Ch | Q1 | Q2 | Q3 | Q4 | Q5 |
 |----|----|----|----|----|-----|
 | 1  | C  | B  | B  | B  | B   |
 | 2  | C  | B  | C  | A  | C   |
 | 3  | B  | A  | B  | C  | B   |
-| 4  | C  | B  | B  | C  | -   |
-| 5  | B  | -  | -  | -  | -   |
-| 6  | C  | B  | C  | -  | -   |
+| 4  | C  | C  | B  | D  | B   |
+| 5  | B  | B  | B  | C  | B   |
+| 6  | C  | B  | C  | B  | B   |
 | 7  | B  | C  | C  | D  | B   |
 | 8  | B  | C  | A  | B  | B   |
 | 9  | B  | C  | C  | B  | B   |
 | 10 | B  | B  | B  | B  | B   |
 
-### 정답 해설
-
-**Chapter 1**
-- Q1.1: C - 각 컨텍스트별로 필요한 정보만 담은 별도 모델 정의
-- Q1.2: B - Record는 setter가 없음 (불변)
-- Q1.3: B - 객체가 여러 곳에서 변경되어 상태 추적이 어렵다
-- Q1.4: B - 기획서 용어가 그대로 코드에 등장
-- Q1.5: B - 주문 컨텍스트에서 인증 정보에 접근
-
-**Chapter 2**
-- Q2.1: C - 메모리 사용량 증가는 Primitive Obsession의 문제가 아님
-- Q2.2: B - Value Object는 값이 같으면 같은 객체
-- Q2.3: C - Compact Constructor에서 검증
-- Q2.4: A - double 대신 BigDecimal 사용 (부동소수점 오차)
-- Q2.5: C - 주문 상태는 String이 아니라 enum 또는 sealed interface
-
-**Chapter 3**
-- Q3.1: B - 배송 정보는 모든 필드가 필요한 AND 타입
-- Q3.2: A - permits는 구현 가능한 클래스를 제한
-- Q3.3: B - 모든 케이스를 다루지 않으면 컴파일 에러
-- Q3.4: C - sealed interface가 가장 적합
-- Q3.5: B - Shipped 케이스 누락으로 컴파일 에러
-
-**Chapter 4**
-- Q4.1: C - 타입으로 "배송 중엔 취소 불가" 규칙을 강제
-- Q4.2: B - VerifiedEmail만 주문할 수 있는 타입 설계
-- Q4.3: B - Phantom Type은 컴파일 타임에만 존재하며, 런타임에는 타입 소거로 동일
-- Q4.4: C - sealed interface로 "있음/없음"을 명시적인 타입으로 표현
-
-**Chapter 5**
-- Q5.1: B - 검증 전후의 데이터가 다른 보장을 가지므로
-
-**Chapter 6**
-- Q6.1: C - 메모리 사용량은 Exception의 문제가 아님
-- Q6.2: B - 결과가 Result인 함수는 flatMap 사용
-- Q6.3: C - Failure가 반환되고 이후 단계는 실행되지 않음
-
-**Chapter 7**
-- Q7.1: B - 폼 검증에서 모든 에러를 한번에 보여줄 때 Validation
-- Q7.2: C - Applicative는 모든 에러를 수집 (첫 에러에서 중단 X)
-- Q7.3: C - Event는 이미 발생한 불변의 사실
-- Q7.4: D - 두 에러 모두 수집됨
-- Q7.5: B - 과거형으로 "이미 일어난 일"을 표현
-
-**Chapter 8**
-- Q8.1: B - 도메인이 인프라에 의존하면 결합도가 높아짐
-- Q8.2: C - 코드량 줄이기는 분리 이유가 아님
-- Q8.3: A - ACL은 외부 형식을 도메인 형식으로 변환
-- Q8.4: B - 외부 API 변경 시 ACL(Adapter)만 수정
-- Q8.5: B - Repository의 OrderMapper.toDomain()은 JPA Entity → Domain 변환 (참고: Controller의 toDomain()은 DTO → Domain 변환)
-
-**Chapter 9**
-- Q9.1: B - 의존성은 바깥쪽에서 안쪽으로 (Infrastructure → Domain)
-- Q9.2: C - 데이터베이스 저장은 부수효과
-- Q9.3: C - 순수 함수는 데이터베이스를 조회하지 않음
-- Q9.4: B - Repository 인터페이스는 Domain 계층에 정의 (DIP)
-- Q9.5: B - Mock 없이 입력/출력만으로 테스트 가능
-
-**Chapter 10**
-- Q10.1: B - sealed interface의 메서드로 정의 (hasFreeShipping())
-- Q10.2: B - 각 컨텍스트에 필요한 데이터만 포함
-- Q10.3: B - 타입으로 "배송 중 취소 불가" 규칙을 강제
-- Q10.4: B - 모든 결제 수단을 타입 안전하게 처리 가능
-- Q10.5: B - 쿠폰 사용 실패 가능성을 명시적으로 표현
-
 ---
 
 *이 교재는 Scott Wlaschin의 "Domain Modeling Made Functional"을 Java 25와 이커머스 도메인에 맞춰 재구성한 것입니다.*
-
----
-
-## Appendix E: 컴파일 가능한 샘플 프로젝트
-
-실제 컴파일 가능한 예제를 보고 싶다면 아래 샘플 프로젝트를 참고하세요.
-
-- 경로: `docs/samples/functional-domain-modeling`
-- 빌드: `mvn -q -f docs/samples/functional-domain-modeling/pom.xml test`
-- Java 버전: 21+ (Record, Sealed Interface, Pattern Matching 사용)
-
-> 📝 **Java 버전 참고사항**:
-> - **Java 21+**: Record, Sealed Interface, Pattern Matching 정식 지원
-> - **Java 25 Preview**: `with` 구문 (JEP 468) - `--enable-preview` 플래그 필요
-> - 샘플 프로젝트는 Java 21+로 실행 가능하며, `with` 구문 대신 수동 `withXxx()` 메서드를 사용합니다
-
-샘플에는 다음이 포함됩니다:
-- `Money`, `OrderLine`, `ValidatedOrder` 등 핵심 도메인 타입
-- `Result`, `Validation` 구현체
-- 간단한 `PlaceOrder` 워크플로우와 테스트
